--- a/product/企业应用/腾讯电子签 SaaS 版/接入指引/企业账号激活.md
+++ b/product/企业应用/腾讯电子签 SaaS 版/接入指引/企业账号激活.md
@@ -36,7 +36,7 @@
 ![image-20210617144718535](https://main.qcloudimg.com/raw/c29594e1a1f3442f80e50f5c31d82fdd.png)
 
 #### 3. 授权方式设置[](id:smallStep3)
-为保证企业合同数据的安全性，企业需对上一步设置的超级管理员进行相关授权，允许超级管理员代表企业行使在腾讯电子签账号下的一切权利（如申请相关账号及数字证书、印章管理、组织管理等）。目前系统支持【上传授权书】和【法定代表人授权】两种授权方式，您可选择任意一种方式完成授权即可。
+为保证企业合同数据的安全性，企业需对上一步设置的超级管理员进行相关授权，允许超级管理员代表企业行使在腾讯电子签账号下的一切权利（如申请相关账号及数字证书、印章管理、组织管理等）。目前系统支持**上传授权书**和**法定代表人授权**两种授权方式，您可选择任意一种方式完成授权即可。
 
 <dx-tabs>
 ::: 通过上传授权书完成授权
