--- a/product/计算与网络/私有网络2018-09-13/常见问题（新）/安全类/端口与安全组相关.md
+++ b/product/计算与网络/私有网络2018-09-13/常见问题（新）/安全类/端口与安全组相关.md
@@ -7,7 +7,7 @@
 若想要使用 8080 端口访问网页，需要在安全组开启、放通该端口的情况下，才能实现。
 放通某个端口的操作步骤如下：
 1. 登录 [安全组控制台](https://console.cloud.tencent.com/vpc/securitygroup)，单击该实例绑定的安全组，进入详情页。
-2. 选择入站规则/出站规则，单击【添加规则】。
+2. 选择入站规则/出站规则，单击**添加规则**。
 3. 填写您的 IP 地址（段）及需要放通的端口信息，选择允许放通。
 详细操作步骤，请参见 [添加安全组规则](https://cloud.tencent.com/document/product/215/39790)。
 
@@ -23,7 +23,7 @@
 | UDP  | 1026、1027、1434、1068、5554、9996、1028、1433、135 - 139 |
 
 ### 为什么无法使用 TCP 25 端口连接外部地址，如何解禁？
-- 为了提升腾讯云 IP 地址发邮件的质量，将默认限制云服务器使用 TCP 25 端口连接外部地址。您可以登录 [控制台](https://console.cloud.tencent.com/)，将鼠标移动至顶部导航账号处，单击【安全管控】即可看到25端口解封入口。
+- 为了提升腾讯云 IP 地址发邮件的质量，将默认限制云服务器使用 TCP 25 端口连接外部地址。您可以登录 [控制台](https://console.cloud.tencent.com/)，将鼠标移动至顶部导航账号处，单击**安全管控**即可看到25端口解封入口。
 - 每个账号支持解封5次云服务器，且仅支持预付费包年包月的云服务器，暂不支持按量付费云服务器。
 
 更多端口说明，请参见 [服务器常用端口](https://cloud.tencent.com/document/product/215/37891)。
