--- a/product/物联网/物联使能/物联使能 API/数据结构.md
+++ b/product/物联网/物联使能/物联使能 API/数据结构.md
@@ -22,7 +22,7 @@
 ## DeviceInfo
 
 设备详细信息
-被如下接口引用：ServiceBindDevice、ServiceDescribeDevice、ServiceGetDeviceList
+被如下接口引用：ServiceDescribeDevice、ServiceGetDeviceList
 
 | 名称            | 类型   | 必选 | 描述                                    |
 | --------------- | ------ | ---- | --------------------------------------- |
@@ -111,4 +111,13 @@
 | ReportInfos | Array of [ReportDataItem](#ReportDataItem) | 是   | 上报信息列表        |
 | ReportTime  | Int64                                      | 是   | 上报时间 秒级时间戳 |
   
-  
+## [ServiceDeviceInfo](id:ServiceDeviceInfo)
+
+设备信息
+被如下接口引用：ServiceBindDevice
+
+| 名称        | 类型                                       | 必选 | 描述                |
+| ----------- | ------------------------------------------ | ---- | ------------------- |
+|CustomerDeviceNo|String	|是	|用户对应的厂商设备编号|
+|DeviceId	|String|	是	|在物联网开发平台创建的设备 ID，唯一标识一个设备，由 产品 ID + "/" + 设备名称 组合而成，例如 ProductABC/Device001|
+|ProductName|	String|	是	|在物联网开发平台创建的产品名称|
