--- a/product/物联网/物联使能/物联使能 API/物联网安全保障服务/设备与用户绑定关系推送.md
+++ b/product/物联网/物联使能/物联使能 API/物联网安全保障服务/设备与用户绑定关系推送.md
@@ -15,7 +15,7 @@
 | Timestamp   | Int64                                              | 是   | 公共参数，请求的 Unix 时间戳（秒级）                         |
 | Nonce       | Int                                                | 是   | 公共参数，随机正整数，与 Timestamp 联合起来，防止重放攻击    |
 | CustomerId  | String                                             | 是   | 厂商应用端的唯一用户ID                                       |
-| DeviceInfos | Array of [ServiceDeviceInfo](https://cloud.tencent.com/document/product/1465/59061#ServiceDeviceInfo) | 是   | 设备信息列表，支持推送用户与单个或批量设备的绑定关系。<br/>当用户对应多个厂商设备编号时，必须采用批量推送方式。          |
+| DeviceInfos | Array of [ServiceDeviceInfo](https://cloud.tencent.com/document/product/1465/59061#ServiceDeviceInfo) | 是   | 设备信息列表。<br/>支持推送用户与单个或批量设备的绑定关系。当用户对应多个厂商设备编号时，必须采用批量推送方式。          |
 
 ## 3. 输出参数
 
