--- a/product/物联网/物联使能/物联使能 API/数据结构.md
+++ b/product/物联网/物联使能/物联使能 API/数据结构.md
@@ -113,11 +113,31 @@
   
 ## [ServiceDeviceInfo](id:ServiceDeviceInfo)
 
-设备信息
-被如下接口引用：ServiceBindDevice
-
-| 名称        | 类型                                       | 必选 | 描述                |
-| ----------- | ------------------------------------------ | ---- | ------------------- |
-|CustomerDeviceNo|String	|是	|用户对应的厂商设备编号|
-|DeviceId	|String|	是	|在物联网开发平台创建的设备 ID，唯一标识一个设备，由 产品 ID + "/" + 设备名称 组合而成，例如 ProductABC/Device001|
-|ProductName|	String|	是	|在物联网开发平台创建的产品名称|
+<table>
+<thead>
+<tr>
+<th>名称</th>
+<th>类型</th>
+<th>必选</th>
+<th>描述</th>
+</tr>
+</thead>
+<tbody><tr>
+<td>CustomerDeviceNo</td>
+<td>String</td>
+<td>是</td>
+<td>用户对应的厂商设备编号</td>
+</tr>
+<tr>
+<td>DeviceId</td>
+<td>String</td>
+<td>是</td>
+<td>在物联网开发平台创建的设备 ID，唯一标识一个设备，由&nbsp;产品 ID + "/" + 设备名称&nbsp;组合而成，例如&nbsp;ProductABC/Device001</td>
+</tr>
+<tr>
+<td>ProductName</td>
+<td>String</td>
+<td>是</td>
+<td>在物联网开发平台创建的产品名称</td>
+</tr>
+</tbody></table>
