--- a/product/企业应用/版权登记/操作指南/作品著作权作品信息填写说明.md
+++ b/product/企业应用/版权登记/操作指南/作品著作权作品信息填写说明.md
@@ -9,7 +9,7 @@
 ## 填写作品著作权信息
 
 ### 步骤1：填写作品基本信息
-1. 购买版权服务后，您可以前往 [版权登记管理](https://console.cloud.tencent.com/crr/manage) 页面，单击【补齐资料】，进入版权登记信息页。
+1. 购买版权服务后，您可以前往 [版权登记管理](https://console.cloud.tencent.com/crr/manage) 页面，单击**补齐资料**，进入版权登记信息页。
 ![](https://main.qcloudimg.com/raw/aacd29103bfe122eb025c17e5a9146a2.png)
 2. 在版权登记信息页，填写以下作品基本信息。
 ![](https://main.qcloudimg.com/raw/f7b779d37bfae0f8f562c8c308801218.png)
@@ -34,7 +34,7 @@
 
 
 ### 步骤2：上传作品登记材料
-1. 作品基本信息填写完成后，需要上传您作品登记材料。单击【点击上传】，选择对应上传文件即可。如下图：
+1. 作品基本信息填写完成后，需要上传您作品登记材料。单击**点击上传**，选择对应上传文件即可。如下图：
 ![](https://main.qcloudimg.com/raw/3a01abfd9e5544f3d4a05f1d21bb704c.png)
 **作品登记材料包括作品样本和作品说明文档、及权利归属声明三部分。**
 2. 作品样本提交后若顾问审核判定为系列作品，需补充支付系列作品登记费，待顾问审核后为您的订单创建增费项，您再进行补款支付即可。
