--- a/product/企业应用/版权登记/操作指南/作品著作权作品信息填写说明.md
+++ b/product/企业应用/版权登记/操作指南/作品著作权作品信息填写说明.md
@@ -22,13 +22,13 @@
  - **著作权人署名**
 指在作品上著作权人的署名情况，若为本名，此项无需填写。若署名非本名，请注明署名情况，匿名（不署名）以及其他署名（别名、笔名、艺名等）。
  - **权利归属方式**
-根据实际情况选择各类权属，包括个人作品、合作作品、法人作品、职务作品以及委托作品。
+根据实际情况选择各类权属，包括个人作品、合作作品、法定代表人作品、职务作品以及委托作品。
  - **作品创作性质**
 若为原创，本项无需填写。若根据他人作品再创作的，请注明性质（包括改编、翻译、注释、整理等）并填写使用的原作品名称、著作权人和作品出处等。
  - **创作完成日期**
 填写所申请登记作品创作完成的具体日期（年月日）。
  - **创作完成地点**
-填写创作完成该作品的国家和城市，海外请填写中文翻译。
+填写创作完成该作品的国家和城市，境外请填写中文翻译。
  - **发表状态**
 可选择已发表或未发表，选择已发表的，应填写首次发表日期（精确到年月日）及发表地点。
 
@@ -44,6 +44,6 @@
     - 独创性声明（该作品由作者独立创作完成，且不存在抄袭、复制他人作品的情形）。
  - 权利归属证明指除个人作品，其余权利归属方式的作品需提供作品创作声明或相关的协议：
     -  合作作品需提交合作创作协议（复印件）或其他能证明合作创作的声明等证明文件。
-    -  法人作品需提交法人创作声明，即说明该作品是由法人或其他组织主持，代表法人或者其他组织意志创作，并由法人或者其他组织承担责任的作品；
+    -  法定代表人作品需提交法定代表人创作声明，即说明该作品是由法定代表人或其他组织主持，代表法定代表人或者其他组织意志创作，并由法定代表人或者其他组织承担责任的作品；
     -  职务作品，需提交职务创作声明（需作者签字、公司盖章）或作者与单位签订的创作协议（复印件）。
 委托作品需提交委托协议（复印件）或其他能证明委托创作的声明等证明文件。
