--- a/product/数据库/数据传输服务DTS/最佳实践/多对一同步.md
+++ b/product/数据库/数据传输服务DTS/最佳实践/多对一同步.md
@@ -7,7 +7,7 @@
 ## 注意事项
 
 - DTS 在执行全量数据同步时，会占用一定源端实例资源，可能会导致源实例负载上升，增加数据库自身压力。如果您数据库配置过低，建议您在业务低峰期进行。
-- 为了避免数据重复，请确保需要同步的表具有主键或者非空唯一键。 
+- 为了避免数据重复，请确保需要同步的表具有主键或者非空唯一键，对于没有主键或者非空唯一键的表，有数据重复的风险。 
 - 用户应提前规划好数据，各个源端负责更新（增、删、改）不同主键的数据，避免主键冲突或者相同主键数据互相覆盖等情况。如果因为业务原因，各源端负责的主键存在交叉，需要参考[推荐配置](#tjpz)，选择合理的冲突策略，使同步行为和数据符合预期。
 
 
