--- a/product/监控与管理/云监控/云产品指标/云产品指标3.0/负载均衡/公网负载均衡监控指标.md
+++ b/product/监控与管理/云监控/云产品指标/云产品指标3.0/负载均衡/公网负载均衡监控指标.md
@@ -50,11 +50,13 @@ Namespace=QCE/LB_PUBLIC
 | Instances.N.Dimensions.2.name  | protocol         | 监听协议的维度名称            | 输入 String 类型维度名称：protocol         |
 | Instances.N.Dimensions.2.value | protocol         | 具体监听的协议                | 输入协议值具体名称，例如：http             |
 | Instances.N.Dimensions.3.name  | vpcId            | 私有网络 ID 的维度名称        | 输入 String 类型维度名称：vpcId            |
-| Instances.N.Dimensions.3.value | vpcId            | 负载均衡所在私有网络的具体 ID | 输入私有网络具体 ID，例如：vpc-1ywqac83    |
+| Instances.N.Dimensions.3.value | vpcId            | 负载均衡所在私有网络的具体 ID ，若是跨地域绑定 1.0 请查看表格下的说明| 输入私有网络具体 ID，例如：vpc-1ywqac83    |
 | Instances.N.Dimensions.4.name  | lanIp            | 后端服务器 IP 地址的维度名称  | 输入 String 类型维度名称：lanIp            |
 | Instances.N.Dimensions.4.value | lanIp            | 后端服务器的具体 IP 地址      | 输入具体 IP 地址，例如：111.222.111.22     |
 | Instances.N.Dimensions.5.name  | port             | 后端服务器端口的维度名称      | 输入 String 类型维度名称：port             |
 | Instances.N.Dimensions.5.value | port             | 后端服务器的具体服务端口号    | 输入具体端口号，例如：80                   |
+
+>?Instances.N.Dimensions.3.value 参数是指负载均衡所在私有网络的具体 ID，但仅在跨地域绑定1.0的情况下，此参数为跨地域 VPC 的 ID。
 
 ## 入参说明
 
@@ -105,3 +107,5 @@ Namespace=QCE/LB_PUBLIC
 &Instances.N.Dimensions.4.Value=为负载均衡绑定机器的 IP
 &Instances.N.Dimensions.5.Name=port
 &Instances.N.Dimensions.5.Value=负载均衡绑定机器的端口号
+
+
