--- a/product/安全服务/BGP 高防 IP/DDOS 边缘安全防护/产品简介/产品概述.md
+++ b/product/安全服务/BGP 高防 IP/DDOS 边缘安全防护/产品简介/产品概述.md
@@ -1,4 +1,4 @@
-DDoS 边缘安全防护是为业务覆盖在境外地区的用户，提供的一款多类型防护能力组合的产品。具有 DDoS 防护、CC 防护、Web 防护和 Bot 防护功能，为客户提供网络层、运输层（L3/L4层）DDoS 防护和基础应用层（7层）防护。用户根据自己实际业务形态通过 L4层端口接入或 L7层域名接入形式配置转发规则，将攻击流量引至腾讯云的检测清洗中心进行清洗，保障业务稳定可用。
+DDoS 边缘防护是为业务覆盖在境外地区的用户，提供的一款多类型防护能力组合的产品。具有 DDoS 防护、CC 防护、Web 防护和 Bot 防护功能，为客户提供网络层、运输层（L3/L4层）DDoS 防护和基础应用层（7层）防护。用户根据自己实际业务形态通过 L4层端口接入或 L7层域名接入形式配置转发规则，将攻击流量引至腾讯云的检测清洗中心进行清洗，保障业务稳定可用。
 
 DDoS 边缘安全防护提供全球各地8个腾讯云入口，分担各单个入口带宽压力，并提供全力防护服务，最大限度保证各地节点访问的畅通，实现近源清洗、近源回注，提供全球 T 级防护能力。通过各清洗节点之后的正常业务流量将会近源回注到服务器，保证业务流量的畅通与低延迟。
 
