--- a/product/安全服务/BGP 高防 IP/DDOS 边缘安全防护/产品简介/应用场景.md
+++ b/product/安全服务/BGP 高防 IP/DDOS 边缘安全防护/产品简介/应用场景.md
@@ -1,10 +1,10 @@
-DDoS 边缘安全防护适用于实时对战游戏、在线金融、电商等业务对用户实时体验要求较高的场景。满足需要网络层、运输层（L3/L4层）DDoS 防护和基础应用层（L7层）防护的业务敏感性的场景。为业务中存在大量端口、域名、IP 的用户提供 DDoS 攻击防护。
+DDoS 边缘防护适用于实时对战游戏、在线金融、电商等业务对用户实时体验要求较高的场景。满足需要网络层、运输层（L3/L4层）DDoS 防护和基础应用层（L7层）防护的业务敏感性的场景。为业务中存在大量端口、域名、IP 的用户提供 DDoS 攻击防护。
 
 ## 游戏
-游戏境外业务是 DDoS 攻击的重灾区，DDoS 边缘安全防护能有效保障游戏的可用性和持续性，保障游戏全球的玩家流畅体验，同时为活动、新游戏发布或节假日游戏收入旺季时段保驾护航，确保游戏业务正常。
+游戏境外业务是 DDoS 攻击的重灾区，DDoS 边缘防护能有效保障游戏的可用性和持续性，保障游戏全球的玩家流畅体验，同时为活动、新游戏发布或节假日游戏收入旺季时段保驾护航，确保游戏业务正常。
 
 ## 电商
-电商境外业务遍布世界各地，伴随着不同地区的节日与各种促销，访问与订单不断上升。DDoS 边缘安全防护能有效保障全球的业务正常不中断，对电商大促等重大活动时段，提供安全护航。
+电商境外业务遍布世界各地，伴随着不同地区的节日与各种促销，访问与订单不断上升。DDoS 边缘防护能有效保障全球的业务正常不中断，对电商大促等重大活动时段，提供安全护航。
 
 ## 互联网
 保障境外业务网页的流畅访问，全球的业务正常不中断，对特殊节日、特殊事件突发的大量访问，以及日常正常访问提供稳定安全的服务，避免遭受恶意攻击的 DDoS 攻击勒索。
