--- a/product/安全服务/BGP 高防 IP/DDOS 边缘安全防护/操作指南/防护设置/端口过滤.md
+++ b/product/安全服务/BGP 高防 IP/DDOS 边缘安全防护/操作指南/防护设置/端口过滤.md
@@ -1,11 +1,11 @@
-DDoS 边缘安全防护支持针对访问 DDoS 高防的源流量，基于端口进行一键封禁或者放行。开启端口过滤后，可以根据需求自定义协议类型、源端口范围、目的端口范围的组合，并对匹配中的规则进行设置丢弃、放行、继续的防护策略动作。端口过滤可以精准制定针对访问的源流量进行端口设置的防护策略。
+DDoS 边缘防护支持针对访问 DDoS 高防的源流量，基于端口进行一键封禁或者放行。开启端口过滤后，可以根据需求自定义协议类型、源端口范围、目的端口范围的组合，并对匹配中的规则进行设置丢弃、放行、继续的防护策略动作。端口过滤可以精准制定针对访问的源流量进行端口设置的防护策略。
 
 ## 前提条件
-您需要成功[ 购买 DDoS 边界防护](https://cloud.tencent.com/document/product/1014/60842)，并设置防护对象。
+您需要成功[ 购买 DDoS 边缘防护](https://cloud.tencent.com/document/product/1014/60842)，并设置防护对象。
 
 
 ## 操作步骤
-1. 登录 [DDoS 边缘安全防护管理控制台](https://console.cloud.tencent.com/ddos/antiddos-edge/policy/ddos) ，在左侧导航中，单击【防护策略】，并选择【DDoS防护】。
+1. 登录 [DDoS 边缘防护管理控制台](https://console.cloud.tencent.com/ddos/antiddos-edge/policy/ddos) ，在左侧导航中，单击【防护策略】，并选择【DDoS防护】。
 2. 在左边的列表选中高防实例 的 ID，如“edge-xxxxxxx”。
 ![](https://main.qcloudimg.com/raw/e854c4c6423ee81d80ed7b964ac26df1.png)
 3. 在右侧卡片中单击“端口过滤”卡片中的【设置】，进入端口过滤页面。
