--- a/product/安全服务/BGP 高防 IP/DDOS 边缘安全防护/操作指南/CC 防护/防护等级与清洗阈值.md
+++ b/product/安全服务/BGP 高防 IP/DDOS 边缘安全防护/操作指南/CC 防护/防护等级与清洗阈值.md
@@ -22,11 +22,11 @@
 
 
 ## 前提条件
-您需要成功[ 购买 DDoS 边界防护](https://cloud.tencent.com/document/product/1014/60842)，并设置防护对象。
+您需要成功[ 购买 DDoS 边缘防护](https://cloud.tencent.com/document/product/1014/60842)，并设置防护对象。
 
 
 ## 操作步骤
-1. 登录 [DDoS 边缘安全防护管理控制台](https://console.cloud.tencent.com/ddos/antiddos-edge/policy/ddos) ，在左侧导航中，单击【防护策略】，并选择【CC 防护】。
+1. 登录 [DDoS 边缘防护管理控制台](https://console.cloud.tencent.com/ddos/antiddos-edge/policy/ddos) ，在左侧导航中，单击【防护策略】，并选择【CC 防护】。
 2. 在左边的列表选中高防实例 的 ID，如“edge-xxxxxxx”。
 ![](https://main.qcloudimg.com/raw/e854c4c6423ee81d80ed7b964ac26df1.png)
 3. 在右侧“CC 防护等级和清洗阈值”卡片中，单击【设置】。
