--- a/product/安全服务/BGP 高防 IP/DDOS 边缘安全防护/操作指南/业务配置/端口规则.md
+++ b/product/安全服务/BGP 高防 IP/DDOS 边缘安全防护/操作指南/业务配置/端口规则.md
@@ -1,8 +1,8 @@
  ## 前提条件
-已购买 [DDoS 边缘安全防护](https://cloud.tencent.com/document/product/1014/60842)。
+已购买 [DDoS 边缘防护](https://cloud.tencent.com/document/product/1014/60842)。
 
 ## 操作步骤
-1. 登录 [DDoS 边缘安全防护管理控制台](https://console.cloud.tencent.com/ddos/antiddos-edge/policy/ddos) ，在左侧导航中，单击【业务配置】,并单击端口业务接入下方的【立即接入】。
+1. 登录 [DDoS 边缘防护管理控制台](https://console.cloud.tencent.com/ddos/antiddos-edge/policy/ddos) ，在左侧导航中，单击【业务配置】,并单击端口业务接入下方的【立即接入】。
 ![](https://main.qcloudimg.com/raw/74c051d27ba8c4b745340cdf8c171bf8.png)
 2. 在选择实例页面，选择关联资源 ID，单击【下一步：协议选择】。
 ![](https://main.qcloudimg.com/raw/e3092449fc07e5d1dbfe324151c33fa8.png)
