--- a/product/安全服务/云访问安全代理/操作指南/敏感数据识别/敏感数据资产.md
+++ b/product/安全服务/云访问安全代理/操作指南/敏感数据识别/敏感数据资产.md
@@ -1,4 +1,4 @@
-敏感数据资产基于云访问安全实例(Casb 实例）的角度和合规组的维度， 展示敏感数据整体的安全状况，通过设置不同的筛选条件（例如：Casb 实例、合规组、元数据等），获取到您所需要的结果详情。
+敏感数据资产基于云访问安全实例（Casb 实例）的角度和合规组的维度， 展示敏感数据整体的安全状况，通过设置不同的筛选条件（例如：Casb 实例、合规组、元数据等），获取到您所需要的结果详情。
 
 ## 前提条件
 - 已获取 [云访问安全代理](https://console.cloud.tencent.com/casb) 控制台的登录账户与密码。
