--- a/product/安全服务/网站管家/操作指南/访问日志（新）.md
+++ b/product/安全服务/网站管家/操作指南/访问日志（新）.md
@@ -2,7 +2,7 @@
 访问日志（新）功能用于记录 Web 应用防火墙防护域名的访问日志信息，提供防御域名最近30天访问日志查询和下载功能，及不少于180天的访问日志存储服务。启用访问日志功能后，您可以根据需要查询和下载访问日志，满足安全合规、安全运维等需求。
 >!
 >- 目前 Web 应用防火墙控制台已上线访问日志（新）模块，并对所有用户开放，预计将在半个月后下线[ 访问日志（旧）](https://cloud.tencent.com/document/product/627/38253)的模块，在此期间两个模块可以并行使用，建议使用访问日志（新）模块。
->- 使用访问日志功能，需要先 [购买安全日志服务包](https://cloud.tencent.com/document/product/627/11730)，并且根据 [使用说明](#sysm) 启用访问日志开关。只有开启访问日志开关的域名，Web 应用防火墙才会记录该域名的访问日志。
+>- 使用访问日志功能，需要先 [购买安全日志服务包](https://cloud.tencent.com/document/product/627/11730)，并且根据 [操作步骤](#sysm) 启用访问日志开关。只有开启访问日志开关的域名，Web 应用防火墙才会记录该域名的访问日志。
 >- 如需关闭访问日志功能，可以在 [续费管理](https://console.cloud.tencent.com/account/renewal) 中，找到相应计费项目，取消续费即可。
 
 ## 操作步骤
