--- a/product/视频服务/直播/购买指南/折扣活动.md
+++ b/product/视频服务/直播/购买指南/折扣活动.md
@@ -2,7 +2,7 @@
 
 ### 活动详情
 
-面向新用户提供直播限时免费试用，更有特惠套餐包9.9元起，直播/点播流量包买 1TB 赠 1.2TB，[单击体验](https://cloud.tencent.com/act/pro/video_freetrial?from=14867)。
+面向新用户提供直播限时免费试用，更有特惠套餐包9.9元起，直播/点播流量包买**1TB**赠**1.2TB**，[单击体验](https://cloud.tencent.com/act/pro/video_freetrial?from=14867)。
 
 ### 活动对象
 
