--- a/product/移动与通信/即时通信/2购买指南/折扣活动.md
+++ b/product/移动与通信/即时通信/2购买指南/折扣活动.md
@@ -1,17 +1,24 @@
-## 活动1：【IM·上云回馈专场】旗舰版套餐7.5折起
+## 活动1：【100+份壕礼等你拿】腾讯云音视频 邀您有奖测评
+#### 活动详情
+云直播、云点播、实时音视频、即时通信4大产品同步测评，在线留言上墙和提交测评报告两大玩法，赢取大疆 FPV 无人机套装，iPhone 12 mini，Switch 游戏机等逾5万元大奖！[立即参与](https://cloud.tencent.com/act/pro/video_exp?from=14877)。
+
+#### 活动对象
+腾讯云官网已注册且完成实名认证的国内站用户均可参与（协作者与子用户账号除外）。
+
+## 活动2：【IM·上云回馈专场】旗舰版套餐7.5折起
 #### 活动详情
 个人客户以及企业认证客户均可享受的回馈价，旗舰版包年服务最高可享7.5折优惠。单击前往 [立即抢购](https://cloud.tencent.com/act/appreciation#link-cloud_more)。
 #### 活动对象
 腾讯云官网已注册且完成实名认证的国内站用户均可参与（协作者与子作者账号除外）。
 
-## 活动2：【首购1折特惠】即时通信专享福利
+## 活动3：【首购1折特惠】即时通信专享福利
 #### 活动详情
 即时通信 IM 首购1折特惠，支持直播电商、在线教育等多种热门应用场景，助您快速搭建通信平台。[立即前往](https://cloud.tencent.com/act/pro/imnew?from=12787)。
 #### 活动对象
 腾讯云官网已注册且完成实名认证的国内站用户均可参与（协作者与子作者账号除外）。
 
 
-## 活动3：【联合大促】IM+视频云，助您快速搭建四大热门场景平台
+## 活动4：【联合大促】IM+视频云，助您快速搭建四大热门场景平台
 #### 活动详情
 IM 联合实时音视频、云直播、云点播，提供在线教育、直播电商、社交娱乐等热门场景一站式解决方案。
 IM 套餐包1折起，TRTC 套餐包3折起，云直播低至9.9元。[立即进入选购](https://cloud.tencent.com/act/event/imone?from=13596)。
