--- a/product/视频服务/实时音视频/购买指南/折扣活动.md
+++ b/product/视频服务/实时音视频/购买指南/折扣活动.md
@@ -1,6 +1,16 @@
-##  活动1：9.9元享2万分钟 TRTC 通用时长【每个账号每月限购1次】
+## 活动1：【100+份壕礼等你拿】腾讯云音视频 邀您有奖测评
 
-### **活动详情**
+### 活动详情
+云直播、云点播、实时音视频、即时通信4大产品同步测评，在线留言上墙和提交测评报告两大玩法，赢取大疆 FPV 无人机套装，iPhone 12 mini，Switch 游戏机等逾5万元大奖！[单击参与](https://cloud.tencent.com/act/pro/video_exp?from=14877)。
+
+### 活动对象
+
+腾讯云官网已注册且完成实名认证的国内站用户均可参与（协作者与子用户账号除外）。
+
+
+##  活动2：9.9元享2万分钟 TRTC 通用时长【每个账号每月限购1次】
+
+### 活动详情
 
 1分钟跑通 Demo，30分钟构建语音通话、视频通话、互动直播；TRTC 致力于帮助开发者快速搭建低成本、低延时、高品质的音视频互动解决方案，[单击前往](https://cloud.tencent.com/act/pro/trtccx?from=14556)。
 
@@ -8,7 +18,7 @@
 
 活动参与对象需完成账号实名才可以参与购买（协作者不可购买），不对新老客户作出限制。
 
-##  活动2：【低至4元/千分钟】实时音视频·企业首单秒杀
+##  活动3：【低至4元/千分钟】实时音视频·企业首单秒杀
 
 ###  活动详情
 
@@ -18,7 +28,7 @@
 
 腾讯云官网已注册的国内站企业认证用户均可参与（协作者与子用户账号除外）。
 
-##  活动3：【解决方案】TRTC 重磅发布语聊低代码开发解决方案
+##  活动4：【解决方案】TRTC 重磅发布语聊低代码开发解决方案
 
 ###  活动详情
 
@@ -28,7 +38,7 @@
 
 腾讯云官网已注册的国内站用户均可参与（协作者与子用户账号除外）。
 
-## 活动4：【免费扶持资源】音视频创新成长专线
+## 活动5：【免费扶持资源】音视频创新成长专线
 
 ###  活动详情
 
