--- a/product/视频服务/实时音视频/购买指南/折扣活动.md
+++ b/product/视频服务/实时音视频/购买指南/折扣活动.md
@@ -1,4 +1,4 @@
-## 活动1：【100+份壕礼等你拿】腾讯云音视频 邀您有奖测评
+## 活动1：【100+份壕礼等您拿】腾讯云音视频 邀您有奖测评
 
 ### 活动详情
 云直播、云点播、实时音视频、即时通信4大产品同步测评，在线留言上墙和提交测评报告两大玩法，赢取大疆 FPV 无人机套装，iPhone 12 mini，Switch 游戏机等逾5万元大奖！[单击参与](https://cloud.tencent.com/act/pro/video_exp?from=14877)。
