--- a/product/视频服务/直播/购买指南/折扣活动.md
+++ b/product/视频服务/直播/购买指南/折扣活动.md
@@ -1,4 +1,14 @@
-## 活动1：【免费试用】新用户开通可免费领取20GB直播流量资源包
+## 活动1：【100+份壕礼等您拿】腾讯云音视频邀您有奖测评
+
+### 活动详情
+
+云直播、云点播、实时音视频、即时通信4大产品同步测评，在线留言上墙和提交测评报告两大玩法，赢取大疆 FPV 无人机套装，iPhone 12 mini，Switch 游戏机等逾5万元大奖！[单击参与](https://cloud.tencent.com/act/pro/video_exp?from=14877)。
+
+### 活动对象
+
+腾讯云官网已注册且完成实名认证的国内站用户均可参与（协作者与子用户账号除外）。
+
+## 活动2：【免费试用】新用户开通可免费领取20GB直播流量资源包
 
 ### 活动详情
 
@@ -8,9 +18,7 @@
 
 腾讯云官网已注册且完成实名认证的国内站新用户均可参与（协作者与子用户账号除外）。
 
-
-
-## 活动2：【9.9元享100GB直播流量包】云端一体化直播 PaaS 服务
+## 活动3：【9.9元享100GB直播流量包】云端一体化直播 PaaS 服务
 
 ### 活动详情
 
@@ -22,7 +30,7 @@
 
 
 
-## 活动3：【云直播·上云回馈专场】直播流量包0.13元/GB起
+## 活动4：【云直播·上云回馈专场】直播流量包0.13元/GB起
 
 ### 活动详情
 
@@ -34,7 +42,7 @@
 
 
 
-## 活动4：【云直播·小程序插件】快速将直播能力接入小程序端
+## 活动5：【云直播·小程序插件】快速将直播能力接入小程序端
 
 ### 活动详情
 
@@ -46,7 +54,7 @@
 
 
 
-## 活动5：【直播流量资源包支持按比例抵扣快直播日结流量】快直播·毫秒级超低延迟直播
+## 活动6：【直播流量资源包支持按比例抵扣快直播日结流量】快直播·毫秒级超低延迟直播
 
 ### 活动详情
 
@@ -58,7 +66,7 @@
 
 
 
-## 活动6：【云导播台】新用户开通可免费领取一个资源包试用30天
+## 活动7：【云导播台】新用户开通可免费领取一个资源包试用30天
 
 ### 活动详情
 
