--- a/product/企业协同/腾讯会议/操作指南/帐号和管理/企业管理/网络与防火墙.md
+++ b/product/企业协同/腾讯会议/操作指南/帐号和管理/企业管理/网络与防火墙.md
@@ -26,9 +26,9 @@
 ## 服务启用
 1. 完成以上准备工作后，登录腾讯会议 PC 端。
 2. 单击头像进入个人主页，然后进入设置页面。
-3. 单击【代理设置】，填写信息后，单击【开启代理】即可。
+3. 单击**代理设置**，填写信息后，单击**开启代理**即可。
 >?
- - 如果配置表“scope”字段选择0，则类型为【全局模式】，在该模式下，所有数据将通过代理处理。
- - 如果“scope”字段选择2，则类型为【智能模式】，在该模式下，音视频数据将不通过代理处理。
+ - 如果配置表“scope”字段选择0，则类型为**全局模式**，在该模式下，所有数据将通过代理处理。
+ - 如果“scope”字段选择2，则类型为**智能模式**，在该模式下，音视频数据将不通过代理处理。
 
 
