--- a/product/视频服务/实时音视频/购买指南/折扣活动.md
+++ b/product/视频服务/实时音视频/购买指南/折扣活动.md
@@ -21,9 +21,7 @@
 
 ### 活动详情
 
-1分钟跑通 Demo，30分钟构建语音通话、视频通话、互动直播；TRTC 致力于帮助开发者快速搭建低成本、低延时、高品质的音视频互动解决方案，
-
-[单击前往](https://cloud.tencent.com/act/pro/trtccx?from=14556)。
+1分钟跑通 Demo，30分钟构建语音通话、视频通话、互动直播；TRTC 致力于帮助开发者快速搭建低成本、低延时、高品质的音视频互动解决方案，[单击前往](https://cloud.tencent.com/act/pro/trtccx?from=14556)。
 
 ### 活动对象
 
