--- a/product/移动与通信/短信/购买指南/折扣活动.md
+++ b/product/移动与通信/短信/购买指南/折扣活动.md
@@ -1,10 +1,7 @@
 ## 活动1：【免费试用】新用户开通可免费领取国内短信套餐包
-### 活动详情
 企业新用户首次开通可免费领取1000条国内短信套餐包，个人新用户首次开通可免费领取100条国内短信套餐包，[立即体验](https://cloud.tencent.com/act/pro/video_freetrial?from=14867)。
-
 ### 活动对象
-腾讯云官网已注册且完成实名认证的国内站新用户均可参与（协作者与子作者账号除外）。
-
+腾讯云官网已注册且完成实名认证的国内站用户均可参与（协作者与子用户账号除外）。
 
 ## 活动2：【低至0.034元/条】首次购买短信套餐包尊享优惠
 ### 活动详情
