--- a/product/大数据与AI/流计算服务/产品动态.md
+++ b/product/大数据与AI/流计算服务/产品动态.md
@@ -1,3 +1,23 @@
+## 2021年08月
+<table>
+<thead>
+<tr>
+<th width=20%>动态名称</th>
+<th width=48%>动态描述</th>
+<th width=15%>发布时间</th>
+<th width=17%>相关文档</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>新增 Flink-connector-doris</td>
+<td>支持通过 Flink 将数据写入 Doris。</td>
+<td>2021-08-31</td>
+<td><a href="https://cloud.tencent.com/document/product/849/60953" target="_blank">数据库 Doris</a></td>
+</tr>
+</tbody></table>
+
+
 ## 2021年07月
 <table>
 <thead>
