--- a/product/计算与网络/CKafka/常见问题/客户端问题.md
+++ b/product/计算与网络/CKafka/常见问题/客户端问题.md
@@ -20,7 +20,7 @@
   - 流量太大，Topic 的分区数太少，导致写入并行度不够。
   - 服务的质量有问题，例如网络质量下降，Broker 负载升高，客户端负载升高（例如客户端发生了GC）会导致客户端发送到服务端的整体耗时上升，导致生产速率下降。从而导致客户端本地的 buffer 堆积，出现阻塞。
 
-##### 可能原因
+#### 可能原因
 
 1. 如果是专业版实例，可以在控制台查看高级监控，观察服务端的整体负载情况，如请求队列深度，生产消费的服务端耗时等。来确认服务端是否有性能问题。如果是标准版实例，可以 [提交工单](https://console.cloud.tencent.com/workorder/category) 查看这些指标。
    ![](https://main.qcloudimg.com/raw/af8dcc058b765c4f116cba7a89850904.png)
@@ -28,7 +28,7 @@
 3. 如果是偶尔出现阻塞状况，需要排查本地网络是否有波动。特别是容器网络环境下，需要着重关注。
 4. 分析生产者的数量是否过少，可以从单机的流量来分析。如果单机吞吐的流量较大，而生产者又是单线程发送，则需要关注。
 
-#####  解决办法
+####  解决办法
 
 可以通过如下手段尝试解决问题：
 
