--- a/product/大数据与AI/互动白板/客户端API/Android/关键类型定义.md
+++ b/product/大数据与AI/互动白板/客户端API/Android/关键类型定义.md
@@ -478,7 +478,7 @@
 
 | 属性 | 类型 | 值 | 描述 |
 | --- | --- | --- | --- |
-| boardInfoList | java.util.List<TEduBoardController.TEduBoardInfo>	 | - | 白板信息列表 |
+| boardInfoList | java.util.List&lt; TEduBoardController.TEduBoardInfo&gt; | - | 白板信息列表 |
 | downloadUrl | java.lang.String |- | 文件下载地址 |
 | fileId | java.lang.String | -| 文件 ID |
 | pageCount | int	| -| 文件页数 |
@@ -496,6 +496,7 @@
 | expression |java.lang.String | - | 数学函数表达式 |
 | mathBoardId |java.lang.String | - | 函数画板的元素 ID |
 | selectedColor |java.lang.String | - | 数学函数图像选中时的颜色 |
+
 ### TEduBoardController.TEduBoardInfo
 
 [白板信息](https://doc.qcloudtiw.com/android/com/tencent/teduboard/TEduBoardController.TEduBoardInfo.html)
@@ -629,7 +630,7 @@
 | 属性 | 类型 | 描述 |
 | --- | --- | --- |
 | classGroupId | String | 分组id |
-| boards | java.util.List<java.lang.String> | 分组白板列表 |
+| boards | java.util.List&lt;java.lang.String&gt; | 分组白板列表 |
 | currentBoardId | String | 分组初始白板 |
 | title | String | 分组标题 |
-|	users | java.util.List<java.lang.String> | 分组用户列表 |
+|	users | java.util.List&lt; java.lang.String&gt; | 分组用户列表 |
