--- a/product/物联网/物联使能/应用托管/部署服务.md
+++ b/product/物联网/物联使能/应用托管/部署服务.md
@@ -57,9 +57,7 @@
 	- 部署失败：版本部署失败后的状态，单击“部署失败”可查看详细的错误日志。
 	- 创建中：版本部署中的状态。
 	- 版本调整中：账户欠费停机状态下，充值后版本调整恢复中的状态。
-
->?
-版本部署过程中，在版本状态处单击**点击查看**可以进入操作详情页面，查看部署进程日志。
+>?版本部署过程中，在版本状态处单击**点击查看**可以进入操作详情页面，查看部署进程日志。
 <img src="https://main.qcloudimg.com/raw/b60d83dd6df1532eb00cb0fb77f24807.jpg"  / > 
 版本部署完成后，可以在日志页面查看容器日志与服务调用日志。
 ![](https://main.qcloudimg.com/raw/e2bb1fdd867a42f7bf5c7396433149ed.jpg)
