--- a/product/企业协同/腾讯会议/API 文档/REST APIs/企业会议管理/获取参会成员列表.md
+++ b/product/企业协同/腾讯会议/API 文档/REST APIs/企业会议管理/获取参会成员列表.md
@@ -126,7 +126,7 @@ https://api.meeting.qq.com/v1/meetings/{meetingId}/participants?userid={userId}&
 | 参数名称            | 参数类型 | 参数描述                                                     |
 | ------------------- | -------- | ------------------------------------------------------------ |
 | userid              | String   | 参会者用户 ID（企业内部请使用企业唯一用户标识；OAuth2.0 鉴权用户请使用 openId）。 |
-| uuid                | String   | 用户唯一身份 ID。                                               |
+| uuid                | String   | 用户唯一身份 ID，单场会议唯一。                                              |
 | user_name           | String   | 入会用户名（base64）。                                 |
 | phone               | String   | 参会者手机号 hash 值 SHA256（手机号 + "/" + secretid）。       |
 | join_time           | String   | 参会者加入会议时间戳（单位秒）。                            |
