--- a/product/物联网/物联使能/应用托管/部署服务.md
+++ b/product/物联网/物联使能/应用托管/部署服务.md
@@ -67,4 +67,4 @@
 ## 使用限制
 
 - 版本名由系统自动生成，格式为“服务名”+“序号”，序号按照创建顺序依次递增，不支持修改（例如 testservice-001、testservice-002 等）。
-- 不再使用的版本可以手动删除，已删除的版本不计入版本总数，但不会影响新建版本的序号。(例如删除掉版本 "testservice-002"，再次新建的版本仍然会是 "testservice-003"。）
+- 不再使用的版本可以手动删除，已删除的版本不计入版本总数，但不会影响新建版本的序号。（例如删除掉版本 "testservice-002"，再次新建的版本仍然会是 "testservice-003"。）
