--- a/product/大数据与AI/互动白板/客户端API/iOS&Mac/关键类型定义.md
+++ b/product/大数据与AI/互动白板/客户端API/iOS&Mac/关键类型定义.md
@@ -502,7 +502,7 @@
 | progressBarUrl |NSString | 自定义加载图标，在 progressEnable = true 时生效，支持 jpg、gif、png、svg |
 | ratio |NSString | 默认白板宽高比，可传格式如“4:3”、“16:9”的字符串，默认“16:9” |
 | scale | UInt32 | 白板默认缩放系数，实际缩放倍数为 scale/100 |
-| scaleRange |NSArray&lt; NSNumber*&gt; | 白板缩放范围，百分比形式，100表示100%，无缩放，默认值 @[@100, @1600] |
+| scaleRange |NSArray&lt;NSNumber*&gt; | 白板缩放范围，百分比形式，100表示100%，无缩放，默认值 @[@100, @1600] |
 | syncFps | NSInteger | 信令同步频率，该值的允许范围为[5, 20]，默认5 |
 | toolType | [TEduBoardToolType](https://doc.qcloudtiw.com/ios/Constants/TEduBoardToolType.html) | 白板工具，默认 TEDU_BOARD_TOOL_TYPE_PEN |
 
@@ -528,7 +528,7 @@
 | --- | --- | --- |
 | brushColor | TEColor  | 画笔颜色 |
 | brushThin | int  | 画笔粗细，默认100 |
-| cursorSize | NSArray<NSNumber*>  | 画笔大小限制 |
+| cursorSize | NSArray&lt;NSNumber*&gt; | 画笔大小限制 |
 | globalBackgroundColor | TEColor  | 全局背景色 |
 | selectAnchorColor | TEColor  | 选框缩放控制点颜色 |
 | selectBoxColor | TEColor  | 选框颜色，包括选框上的缩放，旋转按钮 |
