--- a/product/计算与网络/负载均衡/通知公告/负载均衡实例价格调整公告.md
+++ b/product/计算与网络/负载均衡/通知公告/负载均衡实例价格调整公告.md
@@ -10,7 +10,7 @@
 ## 调价说明
 本次调整覆盖所有负载均衡实例，包括负载均衡（原“应用型负载均衡”）、传统型负载均衡实例。为适应本次架构升级，CLB 部分计费价格将进行调整：
 - **内网负载均衡实例费用价格从0元/小时调整为0.2元/小时（部分地域为0.3元/小时）**。
-- **公网负载均衡实例费用价格从0.02元/小时调整为0.2元/小时（部分地域为0.3元/小时）。
+- **公网负载均衡实例费用价格从0.02元/小时调整为0.2元/小时（部分地域为0.3元/小时）**。
 
 
 调整后的价格详情如下所示：
