--- a/product/大数据与AI/互动白板/客户端API/Android/概览.md
+++ b/product/大数据与AI/互动白板/客户端API/Android/概览.md
@@ -58,9 +58,9 @@
 ### 文件操作接口
 | API | 描述 |
 | --- | --- |
-| [addImagesFile](https://doc.qcloudtiw.com/android/com/tencent/teduboard/TEduBoardController.html#addImagesFile-java.util.List-) | 批量导入图片<br/>当传入文件的 URL 重复时，返回 URL 对应的 文件 ID<br/>最大支持5k的数据  |
+| [addImagesFile](https://doc.qcloudtiw.com/android/com/tencent/teduboard/TEduBoardController.html#addImagesFile-java.util.List-) | 批量导入图片当传入文件的 URL 重复时，返回 URL 对应的 文件 ID<br/>最大支持5k的数据  |
 | [applyFileTranscode](https://doc.qcloudtiw.com/android/com/tencent/teduboard/TEduBoardController.html#applyFileTranscode-java.lang.String-com.tencent.teduboard.TEduBoardController.TEduBoardTranscodeConfig-) | 发起文件转码请求  |
-| [getFileTranscodeProgress](https://doc.qcloudtiw.com/android/com/tencent/teduboard/TEduBoardController.html#getFileTranscodeProgress-java.lang.String-) | 主动查询文件转码进度<br/>该接口仅用于特殊业务场景下主动查询文件转码进度，调用 applyFileTranscode 后，SDK 内部将会自动定期触发 onTEBFileTranscodeProgress 回调，正常情况下您不需要主动调用此接口 |
+| [getFileTranscodeProgress](https://doc.qcloudtiw.com/android/com/tencent/teduboard/TEduBoardController.html#getFileTranscodeProgress-java.lang.String-) | 主动查询文件转码进度该接口仅用于特殊业务场景下主动查询文件转码进度，调用 applyFileTranscode 后，SDK 内部将会自动定期触发 onTEBFileTranscodeProgress 回调，正常情况下您不需要主动调用此接口 |
 | [addTranscodeFile](https://doc.qcloudtiw.com/android/com/tencent/teduboard/TEduBoardController.html#addTranscodeFile-com.tencent.teduboard.TEduBoardController.TEduBoardTranscodeFileResult-boolean-) | 添加转码文件  |
 | [deleteFile](https://doc.qcloudtiw.com/android/com/tencent/teduboard/TEduBoardController.html#deleteFile-java.lang.String-) | 删除文件  |
 | [switchFile](https://doc.qcloudtiw.com/android/com/tencent/teduboard/TEduBoardController.html#switchFile-java.lang.String-) | 切换文件  |
@@ -124,7 +124,7 @@
 | [setMathGraphType](https://doc.qcloudtiw.com/android/com/tencent/teduboard/TEduBoardController.html#setMathGraphType-int-boolean-) | 设置几何画板元素 |
 | [setTextValue](https://doc.qcloudtiw.com/android/com/tencent/teduboard/TEduBoardController.html#setTextValue-java.lang.String-java.lang.String-) | 设置文本组件内容 |
 | [addElement](https://doc.qcloudtiw.com/android/com/tencent/teduboard/TEduBoardController.html#addElement-int-java.lang.String-) | 添加白板元素  |
-| [addImageElement](https://doc.qcloudtiw.com/android/com/tencent/teduboard/TEduBoardController.html#addImageElement-java.lang.String-) | 添加图片资源(已废弃，请使用addElement接口代替)  |
+| [addImageElement](https://doc.qcloudtiw.com/android/com/tencent/teduboard/TEduBoardController.html#addImageElement-java.lang.String-) | 添加图片资源(已废弃，请使用 addElement 接口代替)  |
 
 ### 清空相关
 
@@ -174,7 +174,7 @@
 | API | 描述 |
 | --- | --- |
 | [snapshot](https://doc.qcloudtiw.com/android/com/tencent/teduboard/TEduBoardController.html#snapshot-com.tencent.teduboard.TEduBoardController.TEduBoardSnapshotInfo-) | 白板快照  |
-| [addSnapshotMark](https://doc.qcloudtiw.com/android/com/tencent/teduboard/TEduBoardController.html#addSnapshotMark--) | 生成板书图片标记<br/>需要配合服务端API接口来生成，服务端会根据标记点进行快照截图  |
+| [addSnapshotMark](https://doc.qcloudtiw.com/android/com/tencent/teduboard/TEduBoardController.html#addSnapshotMark--) | 生成板书图片标记需要配合服务端 API 接口来生成，服务端会根据标记点进行快照截图  |
 
 ### 分组讨论相关接口
 
@@ -182,7 +182,7 @@
 | --- | --- |
 | [addBoardToClassGroup](file:///E:/document_workspace/tiw-android-doc/com/tencent/teduboard/TEduBoardController.html#addBoardToClassGroup-java.lang.String-java.lang.String-) | 添加白板到分组 |
 | [addUserToClassGroup](file:///E:/document_workspace/tiw-android-doc/com/tencent/teduboard/TEduBoardController.html#addUserToClassGroup-java.lang.String-java.lang.String-) | 添加用户到分组 |
-| [getAllClassGroupIds](file:///E:/document_workspace/tiw-android-doc/com/tencent/teduboard/TEduBoardController.html#getAllClassGroupIds--)  | 获取所有分组id  |
+| [getAllClassGroupIds](file:///E:/document_workspace/tiw-android-doc/com/tencent/teduboard/TEduBoardController.html#getAllClassGroupIds--)  | 获取所有分组 ID  |
 | [getClassGroupEnable](file:///E:/document_workspace/tiw-android-doc/com/tencent/teduboard/TEduBoardController.html#getClassGroupEnable--) | 获取分组模式状态 |
 | [getClassGroupIdByUserId](file:///E:/document_workspace/tiw-android-doc/com/tencent/teduboard/TEduBoardController.html#getClassGroupIdByUserId-java.lang.String-) |获取用户所在的分组 |
 | [getClassGroupInfoByGroupId](file:///E:/document_workspace/tiw-android-doc/com/tencent/teduboard/TEduBoardController.html#getClassGroupInfoByGroupId-java.lang.String-) |获取分组信息 |
