--- a/product/数据库/数据传输服务DTS/最佳实践/双向同步.md
+++ b/product/数据库/数据传输服务DTS/最佳实践/双向同步.md
@@ -2,18 +2,18 @@
 
 数据传输服务 DTS 支持两个数据库之间的双向数据同步，可应用于异地多活、异地灾备等场景。双向同步通过创建两个同步任务来构建双向的拓扑，支持在同步过程中，两个数据库实例同时写入数据。
 
-因为双向同步是通过创建两个单向同步任务来构建双向拓扑，所以单向同步的约束、操作限制等要求都需要满足，请参考[数据同步]()中的对应同步场景。
+因为双向同步是通过创建两个单向同步任务来构建双向拓扑，所以单向同步的约束、操作限制等要求都需要满足，请参考 [数据同步](https://cloud.tencent.com/document/product/571/58672) 中的对应同步场景。
 
 ## 注意事项
 
 - DTS 在执行全量数据同步时，会占用一定源端实例资源，可能会导致源实例负载上升，增加数据库自身压力。如果您数据库配置过低，建议您在业务低峰期进行。
 - 为了避免数据重复，请确保需要同步的表具有主键或者非空唯一键，对于没有主键或者非空唯一键的表，有数据重复的风险。 
-- 用户应提前规划好数据，两个源端负责更新（增、删、改）不同主键的数据，避免主键冲突或者相同主键数据互相覆盖等情况。如果因为业务原因，两个源端负责的主键存在交叉，需要参考[推荐配置](#tjpz)，选择合理的冲突策略，使同步行为和数据符合预期。
+- 用户应提前规划好数据，两个源端负责更新（增、删、改）不同主键的数据，避免主键冲突或者相同主键数据互相覆盖等情况。如果因为业务原因，两个源端负责的主键存在交叉，需要参考 [推荐配置](#tjpz)，选择合理的冲突策略，使同步行为和数据符合预期。
 
 ## 应用限制
 
 - 双向同步最多仅支持在一个方向进行 DDL，同步链路不能形成环路（正向同步、反向同步只能选择一个进行 DDL）。
-- 目前仅支持 MySQL，云数据库 TDSQL-C MySQL 或者两者之间创建双向同步任务。
+- 目前仅支持 MySQL，云数据库 TDSQL-C（兼容 MySQL 版）或者两者之间创建双向同步任务。
 
 ## 操作步骤
 
@@ -41,38 +41,29 @@
 <td>同步操作类型</td><td>支持操作：Insert、Update、Delete、DDL。<br>双向同步最多支持在一个同步任务中选择 DDL。</td></tr>
 </tbody></table>
 
-示例：构建实例 A 和实例 B 的双向同步，任务一A->B同步，任务二B->A同步。
+示例：构建实例 A 和实例 B 的双向同步，任务一 A > B 同步，任务二 B > A 同步。
 
 <table>
-    <tr>
-        <th width="16%">场景</th> <th width="14%">时间要求</th> <th width="12%">同步任务</th><th width="14%">初始化类型</th><th width="14%">已存在同名表</th><th width="16%">冲突处理机制</th><th width="18%">同步操作类型</th>
-    </tr>
-    <tr>
-        <td rowspan="2">场景一：实例A有库表结构和数据，实例B为空</td><td rowspan="2">需要等任务一进行到“同步增量”阶段再创建任务二</td><td>任务一：正向同步</td><td>结构初始化+全量数据初始化</td><td>前置校验并报错</td><td rowspan="6">请用户自行选择。<li>示例：如果某个主键发生冲突，用户需要以A的内容为准，则任务一选择冲突覆盖，任务二选择冲突忽略或者冲突报错。</li><li>冲突策略的生效对象仅对当前发生主键冲突时的主键数据。</td><td rowspan="6"><li>DDL最多支持在一个任务中选择。</li><li>除DDL外，其他操作类型两个任务保持一致。</li></td>
-    </tr>
-    <tr>
-        <td>任务二：反向同步</td><td>不选择</td><td>忽略并继续执行</td>
-    </tr>
+<tr><th width="16%">场景</th> <th width="14%">时间要求</th> <th width="12%">同步任务</th><th width="14%">初始化类型</th><th width="14%">已存在同名表</th><th width="16%">冲突处理机制</th><th width="18%">同步操作类型</th></tr>
 <tr>
-        <td rowspan="2">场景二：实例A有库表结构和数据，实例B只有库表结构，无数据</td><td rowspan="2">无</td><td>任务一：正向同步</td><td>全量数据初始化</td><td>忽略并继续执行</td>
-    </tr>
-    <tr>
-        <td>任务二：反向同步</td><td>不选择</td><td>忽略并继续执行</td>
-    </tr>
+<td rowspan="2">场景一：实例 A 有库表结构和数据，实例 B 为空</td><td rowspan="2">需要等任务一进行到“同步增量”阶段再创建任务二</td><td>任务一：正向同步</td><td>结构初始化+全量数据初始化</td><td>前置校验并报错</td><td rowspan="6">请用户自行选择。<li>示例：如果某个主键发生冲突，用户需要以A的内容为准，则任务一选择冲突覆盖，任务二选择冲突忽略或者冲突报错。</li><li>冲突策略的生效对象仅对当前发生主键冲突时的主键数据。</td><td rowspan="6"><li>DDL 最多支持在一个任务中选择。</li><li>除 DDL 外，其他操作类型两个任务保持一致。</li></td></tr>
 <tr>
-        <td rowspan="2">场景三：实例A、B都有库表结构和数据</td><td rowspan="2">无</td><td>任务一：正向同步</td><td>全量数据初始化</td><td>忽略并继续执行</td>
-    </tr>
-    <tr>
-        <td>任务二：反向同步</td><td>全量数据初始化</td><td>忽略并继续执行</td>
-    </tr>
+<td>任务二：反向同步</td><td>不选择</td><td>忽略并继续执行</td></tr>
+<tr>
+<td rowspan="2">场景二：实例 A 有库表结构和数据，实例 B 只有库表结构，无数据</td><td rowspan="2">无</td><td>任务一：正向同步</td><td>全量数据初始化</td><td>忽略并继续执行</td></tr>
+<tr>
+<td>任务二：反向同步</td><td>不选择</td><td>忽略并继续执行</td></tr>
+<tr>
+<td rowspan="2">场景三：实例 A、B 都有库表结构和数据</td><td rowspan="2">无</td><td>任务一：正向同步</td><td>全量数据初始化</td><td>忽略并继续执行</td></tr>
+<tr>
+<td>任务二：反向同步</td><td>全量数据初始化</td><td>忽略并继续执行</td></tr>
 </table>
 
-本场景以 MySQL 双向同步（实例A有库表结构和数据，实例B只有库表结构，无数据）为例进行介绍，其他数据库的双向同步操作类似，请参考本指导进行。
+本场景以 MySQL 双向同步（实例 A 有库表结构和数据，实例 B 只有库表结构，无数据）为例进行介绍，其他数据库的双向同步操作类似，请参考本指导进行。
 
-#### 创建同步任务一正向同步（实例A->实例B）
+#### 创建同步任务一正向同步（实例A > 实例 B）
 
-1. 登录 [数据同步购买页](https://buy.cloud.tencent.com/dts)，选择相应配置，单击【立即购买】。
-
+1. 登录 [数据同步购买页](https://buy.cloud.tencent.com/dts)，选择相应配置，单击**立即购买**。
 <table>
 <thead><tr><th>参数</th><th>描述</th></tr></thead>
 <tbody><tr>
@@ -80,24 +71,18 @@
 <tr>
 <td>源实例类型</td><td>选择 MySQL（包括云数据库 MySQL 及自建 MySQL）。</td></tr>
 <tr>
-<td>源实例地域</td><td>选择源实例A所在地域。</td></tr>
+<td>源实例地域</td><td>选择源实例 A 所在地域。</td></tr>
 <tr>
 <td>目的实例类型</td><td>选择 MySQL（包括云数据库 MySQL 及自建 MySQL）。</td></tr>
 <tr>
-<td>目的实例地域</td><td>选择目的实例B所在地域。</td></tr>
+<td>目的实例地域</td><td>选择目的实例 B 所在地域。</td></tr>
 <tr>
 <td>同步任务规格</td><td>目前只支持标准版。</td></tr>
 </tbody></table>
-
-<img src="https://main.qcloudimg.com/raw/94b1751564b042ad7c9c6dc3c3bf2e29.png"  style="margin:0;">
-
 2. 购买完成后，返回 [数据同步列表](https://console.cloud.tencent.com/dts/replication)，可看到刚创建的数据同步任务，刚创建的同步任务需要进行配置后才可以使用。
-3. 在数据同步列表，单击“操作”列的【配置】，进入配置同步任务页面。
-
+3. 在数据同步列表，单击**操作**列的**配置**，进入配置同步任务页面。
 ![](https://main.qcloudimg.com/raw/61e86b4c68f210359db39c3cd731f9e6.png)
-
-4. 在配置同步任务页面，配置源端实例、帐号密码，配置目标端实例、帐号和密码，测试连通性后，单击【下一步】。
-
+4. 在配置同步任务页面，配置源端实例、帐号密码，配置目标端实例、帐号和密码，测试连通性后，单击**下一步**。
 <table>
 <thead><tr><th>设置项</th><th>参数</th><th>描述</th></tr></thead>
 <tbody><tr>
@@ -112,7 +97,7 @@
 <td>购买时所选择的云数据库实例类型，不可修改。</td></tr>
 <tr>
 <td>源实例地域</td>
-<td>购买时选择的云数据库实例A所在地域，不可修改。</td></tr>
+<td>购买时选择的云数据库实例 A 所在地域，不可修改。</td></tr>
 <tr>
 <td>服务提供商</td>
 <td>支持普通（包括腾讯云 MySQL 数据库及自建 MySQL 数据库）、AWS、阿里云。</td></tr>
@@ -130,15 +115,12 @@
 <td rowspan=3 >目标实例设置</td>
 <td>目标实例类型</td><td>所选择的目标实例类型，不可修改。</td></tr>
 <tr>
-<td>目标实例地域</td><td>选择的目标实例B所在地域，不可修改。</td></tr>
+<td>目标实例地域</td><td>选择的目标实例 B 所在地域，不可修改。</td></tr>
 <tr>
-<td>接入类型</td><td>选择目标数据库B接入类型。</td></tr>
+<td>接入类型</td><td>选择目标数据库 B 接入类型。</td></tr>
 </tbody></table>
-
-![](https://main.qcloudimg.com/raw/2544281064aada36bb7eb0ce5be41e4c.png)
-
-5. 在设置同步选项和同步对象页面，将对数据初始化选项、数据同步选项、同步对象选项进行设置，在设置完成后单击【保存并下一步】。
-
+<img src="https://main.qcloudimg.com/raw/e10c2ef19826e817ccefeae1a4243189.png"  style="zoom:80%;">
+5. 在设置同步选项和同步对象页面，将对数据初始化选项、数据同步选项、同步对象选项进行设置，在设置完成后单击【**保存并下一步**】。
 <table>
 <thead><tr><th>设置项</th><th>参数</th><th>描述</th></tr></thead>
 <tbody>
@@ -161,38 +143,25 @@
 <tr>
 <td>已选对象</td><td>展示已选择的同步对象，支持库表映射。</td></tr>
 </tbody></table>
+<img src="https://main.qcloudimg.com/raw/40f0b245c3e332502984b92af19273c1.png"  style="zoom:80%;">
+6. 在校验任务页面，完成校验并全部校验项通过后，单击**启动任务**。
+>?在校验结果中出现告警项不影响启动任务，但推荐单击**查看详情**获取建议进行调整。
+>
+![](https://main.qcloudimg.com/raw/d4518c9efdc6a00aecbec5a6f9d58f1b.png)
+7. 返回数据同步任务列表，任务开始进入**运行中**状态。
+![](https://main.qcloudimg.com/raw/2ffd9f9a1bb4b5acf82e7d0cc0ff0f73.png)
 
-![](https://main.qcloudimg.com/raw/2f20d31d4269e318bf4fd5f79e93a6a2.png)
-
-6. 在校验任务页面，完成校验并全部校验项通过后，单击【启动任务】。
-
->?在校验结果中出现告警项不影响启动任务，但推荐单击【查看详情】获取建议进行调整。
-
-![](https://main.qcloudimg.com/raw/44e1a373925d2a11284ae83da7430be9.png)
-
-7. 返回数据同步任务列表，任务开始进入“运行中”状态。
-
-![](https://main.qcloudimg.com/raw/cb479be4b2ff4f998989d4bd22fca6d5.png)
-
-#### 创建同步任务二反向同步（实例B->实例A）
-
+#### 创建同步任务二反向同步（实例 B > 实例 A）
 两个同步任务操作基本一致，以下仅对差异点进行详细说明。
-
 1. 设置同步源和目标数据库。
-
-   源实例设置和目标实例设置的所有数据需要与任务一中的数据互换。
-
-![](https://main.qcloudimg.com/raw/c1be6dc4fe289fdd59edb04d5dbed423.png)
-
+源实例设置和目标实例设置的所有数据需要与任务一中的数据互换。
+![](https://main.qcloudimg.com/raw/2d7af132772c45573a171fe4d6ff911c.png)
 2. 设置同步选项和同步对象。
-
-- 初始化类型：不选择。
-- 已存在同名表：忽略并继续执行。
-- 冲突处理机制：与任务一选择的保持一致。
-- 同步操作类型：双向同步仅支持在一个同步任务中选择 DDL。本场景在任务一中选择 DDL，在任务二中不选择。
-
-<img src="https://main.qcloudimg.com/raw/112d2cff5975d6847f840e39f9a1d39b.png" style="zoom:67%;" />
+ - 初始化类型：不选择。
+ - 已存在同名表：忽略并继续执行。
+ - 冲突处理机制：与任务一选择的保持一致。
+ - 同步操作类型：双向同步仅支持在一个同步任务中选择 DDL。本场景在任务一中选择 DDL，在任务二中不选择。
+ - <img src="https://main.qcloudimg.com/raw/112d2cff5975d6847f840e39f9a1d39b.png" style="zoom:67%;" />
 
 #### 结束同步任务
-
-如不需要同步任务，可选择“操作”列的【更多】 >【结束】，关闭同步任务。
+如不需要同步任务，可选择**操作**列的**更多** >**结束**，关闭同步任务。
