--- a/product/安全服务/BGP 高防 IP/DDOS 边缘安全防护/操作指南/业务配置/端口规则.md
+++ b/product/安全服务/BGP 高防 IP/DDOS 边缘安全防护/操作指南/业务配置/端口规则.md
@@ -1,3 +1,5 @@
+ 非网站业务（例如：端游、手游、App等）接入 DDoS 边缘防护时，需要在 DDoS 边缘防护的端口规则页面为业务添加转发规则，本文将介绍如何添加相关转发规则。
+ 
  ## 前提条件
 已购买 [DDoS 边缘防护](https://cloud.tencent.com/document/product/1014/60842)。
 
