--- a/product/存储与CDN/内容分发网络/配置手册/缓存配置/缓存规则配置.md
+++ b/product/存储与CDN/内容分发网络/配置手册/缓存配置/缓存规则配置.md
@@ -21,7 +21,7 @@
 
 ### 新增规则
 
-支持指定文件后缀（如：jpg;png)，文件目录（如：/test）和全路径文件（如：/test/1.jpg）配置节点缓存行为：
+支持指定文件后缀（如：jpg;png），文件目录（如：/test）和全路径文件（如：/test/1.jpg）配置节点缓存行为：
 <img src="https://main.qcloudimg.com/raw/261dafac3af2b1f6297f02197fc0fc12.png" height="207" width="408" />
 
 - 遵循源站：遵循源站的 Cache-Control 头部。
