--- a/product/安全服务/BGP 高防 IP/DDOS 边缘安全防护/操作指南/业务配置/域名规则.md
+++ b/product/安全服务/BGP 高防 IP/DDOS 边缘安全防护/操作指南/业务配置/域名规则.md
@@ -1,3 +1,4 @@
+网站业务接入 DDoS 边缘防护时，需要在DDoS 边缘防护的域名规则页面为业务添加转发规则，本文将介绍如何接入域名业务相关的步骤。
  ## 前提条件
 已购买 [DDoS 边缘防护](https://cloud.tencent.com/document/product/1014/60842)。
 
