--- a/product/安全服务/BGP 高防 IP/DDOS 边缘安全防护/购买指南/计费概述.md
+++ b/product/安全服务/BGP 高防 IP/DDOS 边缘安全防护/购买指南/计费概述.md
@@ -25,6 +25,6 @@ DDoS 边缘防护为腾讯云内外用户在境外的业务，提供针对 DDoS 
 
 ## 计费示例
 例如，用户在购买了一个DDoS边界防护，若当月使用了4TB的业务流量，其中流量组成：南美：1TB、亚太3区：3TB，则计费如下：
-- 南美产生的流量则落入了“0 – 2TB”的计费区间，产生的费用为： 0.83元/GB × 1TB = 849.92 元。
-- 亚太3区的流量则分别落入了“0 – 2TB”与“2 – 10TB”的计费区间，产生的费用为：0.78元/GB × 2TB + 0.75元/GB × 1TB = 2365.44元。
-- 当月总费用为=基础费用+流量费用，即需要缴纳：18000+849.92 + 2365.44= 21215.36元
+- 南美产生的流量则落入了“0 – 2TB”的计费区间，产生的费用为： 0.83元/GB × 1TB =830 元。
+- 亚太3区的流量则分别落入了“0 – 2TB”与“2 – 10TB”的计费区间，产生的费用为：0.78元/GB × 2TB + 0.75元/GB × 1TB = 2310元。
+- 当月总费用为=基础费用+流量费用，即需要缴纳：18000 + 830 + 2310 = 21140元。
