--- a/product/域名与网站/域名注册/常见问题/域名与备案相关.md
+++ b/product/域名与网站/域名注册/常见问题/域名与备案相关.md
@@ -1,3 +1,2 @@
 ### 已备案的域名，因过期未续费、赎回释放后，备案信息会被注销吗？
-不会。已备案的域名因过期未续费、赎回释放后，建议您在备案服务商处申请注销网站，避免被他人恶意抢注，用于违规违法行为。若您的域名已在腾讯云备案成功，请参考 [注销网站](https://cloud.tencent.com/document/product/243/37409) 进行操作。
-
+不会。已备案的域名因过期未续费、赎回释放后，建议您在备案服务商处申请注销网站，避免被他人恶意抢注，用于违规违法行为。若您在腾讯云备案的域名已被释放，请参考 [注销网站](https://cloud.tencent.com/document/product/243/37409) 进行操作。
