--- a/product/数据库/数据传输服务DTS/最佳实践/多对一同步.md
+++ b/product/数据库/数据传输服务DTS/最佳实践/多对一同步.md
@@ -2,31 +2,26 @@
 
 多对一同步即将多个源端数据库的内容同步到一个目标数据库。用户使用单个数据库由于负载压力大或者受限于地域原因，经常会做数据拆分，使用多个数据库实例来存储同种类型的库表，但是这样给数据查询带来了不便。使用多对一同步功能，可以解决用户的这类问题。
 
-因为多对一同步是通过创建多个单向同步任务来构建多对一拓扑，所以单向同步的约束、操作限制等要求都需要满足，请参考[数据同步]()中的对应同步场景。
+因为多对一同步是通过创建多个单向同步任务来构建多对一拓扑，所以单向同步的约束、操作限制等要求都需要满足，请参考 [数据同步](https://cloud.tencent.com/document/product/571/58672) 中的对应同步场景。
 
 ## 注意事项
 
 - DTS 在执行全量数据同步时，会占用一定源端实例资源，可能会导致源实例负载上升，增加数据库自身压力。如果您数据库配置过低，建议您在业务低峰期进行。
 - 为了避免数据重复，请确保需要同步的表具有主键或者非空唯一键，对于没有主键或者非空唯一键的表，有数据重复的风险。 
-- 用户应提前规划好数据，各个源端负责更新（增、删、改）不同主键的数据，避免主键冲突或者相同主键数据互相覆盖等情况。如果因为业务原因，各源端负责的主键存在交叉，需要参考[推荐配置](#tjpz)，选择合理的冲突策略，使同步行为和数据符合预期。
+- 用户应提前规划好数据，各个源端负责更新（增、删、改）不同主键的数据，避免主键冲突或者相同主键数据互相覆盖等情况。如果因为业务原因，各源端负责的主键存在交叉，需要参考 [推荐配置](#tjpz)，选择合理的冲突策略，使同步行为和数据符合预期。
 
 
 ## 应用限制
 
 - 多个同步任务配置中 DDL 不能形成环形链路。
-
-
-- 目前仅支持 MySQL，云数据库 TDSQL-C MySQL 或者两者之间创建多对一同步任务。
+- 目前仅支持 MySQL，云数据库 TDSQL-C（兼容 MySQL 版）或者两者之间创建多对一同步任务。
 
 ## 配置原则
 
 - 多个同步任务配置中 DDL 不能形成环形链路，否则可能造成 DDL 语句在系统中循环，进而引发错误。
-
 - 目标端同一个库表对象不能接收多个源端的 DDL 同步，否则多个源端的 DDL 可能在目标端形成冲突，进而引发错误。
-
    - 多张同名表合并为一张表类型的多对一同步中，只能在一个同步任务中选择 DDL。
    - 其他类型的多对一同步（如多张不同名称的表合并到一个库），可以在每个任务中选择 DDL，请用户根据实际情况选择合适的 DDL 同步策略。
-
 - 在校验阶段，同步系统会结合当前用户的所有其他同步任务，判断正在新建的同步任务是否会造成 DDL 循环或者冲突，并给出提示供用户参考。 
 
 ## 操作步骤
@@ -36,11 +31,7 @@
 多对一同步是通过创建多个单向同步任务来构建多对一拓扑，每个单向同步的步骤与普通的单向同步的步骤类似，只是在同步选项设置有差异。
 
 如下列出了典型场景的推荐配置，请用户参考操作。
-
-
-
 <img src="https://main.qcloudimg.com/raw/1feadc5ff345d608d9bc48e4dea49c9d.png" style="zoom:60%;" />
-
 <table>
 <thead><tr><th>设置项</th><th>参数</th><th>描述</th></tr></thead>
 <tbody>
@@ -59,39 +50,29 @@
 <td>同步操作类型</td><td>支持操作：Insert、Update、Delete、DDL。<br>双向同步最多支持在一个同步任务中选择 DDL。</td></tr>
 </tbody></table>
 
-示例：构建实例A、B到C的同步，且实例**A、B中有相同名称的表需要同步到实例C**，任务一A->C同步，任务二B->C同步。如有更多的源端需要同步到目的端，参考任务二增加同步任务即可。
+示例：构建实例 A、B 到 C 的同步，且实例 A、B 中有相同名称的表需要同步到实例 C，任务一 A > C 同步，任务二 B > C 同步。如有更多的源端需要同步到目的端，参考任务二增加同步任务即可。
 
 <table>
-    <tr>
-        <th width="15%">场景</th> <th width="13%">时间要求</th> <th width="10%">同步任务</th><th width="12%">初始化类型</th><th width="13%">已存在同名表</th><th width="17%">冲突处理机制</th><th width="15%">同步操作类型</th>
-    </tr>
-    <tr>
-        <td rowspan="2">场景一：实例A、B有库表结构和数据，实例C为空</td><td rowspan="2">需要等任务一进行到“同步增量”阶段再启动任务二</td><td>任务一</td><td>结构初始化+全量数据初始化</td><td>忽略并继续执行</td><td rowspan="6">请用户自行选择。<li>示例：如果某个主键发生冲突，用户需要以A的内容为准，则任务一选择冲突覆盖，任务二选择冲突忽略或者冲突报错。</li><li>冲突策略的生效对象仅对当前发生主键冲突时的主键数据。</li></td><td rowspan="6"><li>最多支持在一个任务中选择DDL。</li><li>除DDL外，其他操作类型两个任务保持一致。</li></td>
-    </tr>
-    <tr>
-        <td>任务二</td><td>全量数据初始化</td><td>忽略并继续执行</td>
-    </tr>
+<tr><th width="15%">场景</th> <th width="13%">时间要求</th> <th width="10%">同步任务</th><th width="12%">初始化类型</th><th width="13%">已存在同名表</th><th width="17%">冲突处理机制</th><th width="15%">同步操作类型</th></tr>
 <tr>
-        <td rowspan="2">场景二：实例A、B有库表结构和数据，实例C只有库表结构，无数据</td><td rowspan="2">无</td><td>任务一</td><td>全量数据初始化</td><td>忽略并继续执行</td>
-    </tr>
-    <tr>
-        <td>任务二</td><td>同任务一</td><td>同任务一</td>
-    </tr>
+<td rowspan="2">场景一：实例 A、B 有库表结构和数据，实例 C 为空</td><td rowspan="2">需要等任务一进行到“同步增量”阶段再启动任务二</td><td>任务一</td><td>结构初始化 + 全量数据初始化</td><td>忽略并继续执行</td><td rowspan="6">请用户自行选择。<li>示例：如果某个主键发生冲突，用户需要以 A 的内容为准，则任务一选择冲突覆盖，任务二选择冲突忽略或者冲突报错。</li><li>冲突策略的生效对象仅对当前发生主键冲突时的主键数据。</li></td><td rowspan="6"><li>最多支持在一个任务中选择 DDL。</li><li>除 DDL 外，其他操作类型两个任务保持一致。</li></td></tr>
 <tr>
-        <td rowspan="2">场景三：实例A、B、C都有库表结构和数据</td><td rowspan="2">无</td><td>任务一</td><td>全量数据初始化</td><td>忽略并继续执行</td>
-    </tr>
-    <tr>
-        <td>任务二</td><td>同任务一</td><td>同任务一</td>
-    </tr>   
+<td>任务二</td><td>全量数据初始化</td><td>忽略并继续执行</td></tr>
+<tr>
+<td rowspan="2">场景二：实例 A、B 有库表结构和数据，实例 C 只有库表结构，无数据</td><td rowspan="2">无</td><td>任务一</td><td>全量数据初始化</td><td>忽略并继续执行</td></tr>
+<tr>
+<td>任务二</td><td>同任务一</td><td>同任务一</td></tr>
+<tr>
+<td rowspan="2">场景三：实例 A、B、C 都有库表结构和数据</td><td rowspan="2">无</td><td>任务一</td><td>全量数据初始化</td><td>忽略并继续执行</td></tr>
+<tr>
+<td>任务二</td><td>同任务一</td><td>同任务一</td></tr>   
 </table>
 
+如下以 MySQL 二对一同步（实例 A、B 有库表和数据，实例 C 为空）为例进行介绍，其他数据库的多对一同步操作类似，请参考本指导进行。
 
-如下以 MySQL 二对一同步（实例A、B有库表和数据，实例C为空）为例进行介绍，其他数据库的多对一同步操作类似，请参考本指导进行。
+#### 创建同步任务一（实例 A > 实例 C）
 
-#### 创建同步任务一（实例A->实例C）
-
-1. 登录 [数据同步购买页](https://buy.cloud.tencent.com/dts)，选择相应配置，单击【立即购买】。
-
+1. 登录 [数据同步购买页](https://buy.cloud.tencent.com/dts)，选择相应配置，单击**立即购买**。
 <table>
 <thead><tr><th>参数</th><th>描述</th></tr></thead>
 <tbody><tr>
@@ -99,24 +80,18 @@
 <tr>
 <td>源实例类型</td><td>选择 MySQL（包括云数据库 MySQL 及自建 MySQL）。</td></tr>
 <tr>
-<td>源实例地域</td><td>选择源实例A所在地域。</td></tr>
+<td>源实例地域</td><td>选择源实例 A 所在地域。</td></tr>
 <tr>
 <td>目的实例类型</td><td>选择 MySQL（包括云数据库 MySQL 及自建 MySQL）。</td></tr>
 <tr>
-<td>目的实例地域</td><td>选择目的实例C所在地域。</td></tr>
+<td>目的实例地域</td><td>选择目的实例 C 所在地域。</td></tr>
 <tr>
 <td>同步任务规格</td><td>目前只支持标准版。</td></tr>
 </tbody></table>
-
-<img src="https://main.qcloudimg.com/raw/94b1751564b042ad7c9c6dc3c3bf2e29.png"  style="margin:0;">
-
 2. 购买完成后，返回 [数据同步列表](https://console.cloud.tencent.com/dts/replication)，可看到刚创建的数据同步任务，刚创建的同步任务需要进行配置后才可以使用。
-3. 在数据同步列表，单击“操作”列的【配置】，进入配置同步任务页面。
-
-![](https://main.qcloudimg.com/raw/f23a008632ec659b1dc6fe41ffb9b591.png)
-
-4. 在配置同步任务页面，配置源端实例、帐号密码，配置目标端实例、帐号和密码，测试连通性后，单击【下一步】。
-
+3. 在数据同步列表，单击**操作**列的**配置**，进入配置同步任务页面。
+![](https://main.qcloudimg.com/raw/41887651899c6ab4112e9859e0a0afd8.png)
+4. 在配置同步任务页面，配置源端实例、帐号密码，配置目标端实例、帐号和密码，测试连通性后，单击**下一步**。
 <table>
 <thead><tr><th>设置项</th><th>参数</th><th>描述</th></tr></thead>
 <tbody><tr>
@@ -131,7 +106,7 @@
 <td>购买时所选择的云数据库实例类型，不可修改。</td></tr>
 <tr>
 <td>源实例地域</td>
-<td>购买时选择的云数据库实例A所在地域，不可修改。</td></tr>
+<td>购买时选择的云数据库实例 A 所在地域，不可修改。</td></tr>
 <tr>
 <td>服务提供商</td>
 <td>支持普通（包括腾讯云 MySQL 数据库及自建 MySQL 数据库）、AWS、阿里云。</td></tr>
@@ -149,15 +124,12 @@
 <td rowspan=3 >目标实例设置</td>
 <td>目标实例类型</td><td>所选择的目标实例类型，不可修改。</td></tr>
 <tr>
-<td>目标实例地域</td><td>选择的目标实例C所在地域，不可修改。</td></tr>
+<td>目标实例地域</td><td>选择的目标实例 C 所在地域，不可修改。</td></tr>
 <tr>
-<td>接入类型</td><td>选择目标数据库C接入类型。</td></tr>
+<td>接入类型</td><td>选择目标数据库 C 接入类型。</td></tr>
 </tbody></table>
-
-![](https://main.qcloudimg.com/raw/cfc9028d5b105f8b1217789b79089bd1.png)
-
-5. 在设置同步选项和同步对象页面，将对数据初始化选项、数据同步选项、同步对象选项进行设置，在设置完成后单击【保存并下一步】。
-
+<img src="https://main.qcloudimg.com/raw/976867e3c4c1e9d5de6fbe0ca1cb6639.png"  style="zoom:80%;">
+5. 在设置同步选项和同步对象页面，将对数据初始化选项、数据同步选项、同步对象选项进行设置，在设置完成后单击**保存并下一步**。
 <table>
 <thead><tr><th>设置项</th><th>参数</th><th>描述</th></tr></thead>
 <tbody>
@@ -180,39 +152,28 @@
 <tr>
 <td>已选对象</td><td>展示已选择的同步对象，支持库表映射。</td></tr>
 </tbody></table>
+<img src="https://main.qcloudimg.com/raw/6c21f2527976ae27b4fe4abfee3f59ac.png"  style="zoom:80%;">
+6. 在校验任务页面，完成校验并全部校验项通过后，单击**启动任务**。
+>?在校验结果中出现告警项不影响启动任务，但推荐单击**查看详情**获取建议进行调整。
+>
+![](https://main.qcloudimg.com/raw/0318ef177cd72bfc6f99fed0849e391b.png)
+7. 返回数据同步任务列表，任务开始进入**运行中**状态。
+![](https://main.qcloudimg.com/raw/e1bef3285d4786a3f77b69010d32d181.png)
 
-![](https://main.qcloudimg.com/raw/b1f451b2f4089d08433dee8e8b1b5f55.png)
-
-6. 在校验任务页面，完成校验并全部校验项通过后，单击【启动任务】。
-
->?在校验结果中出现告警项不影响启动任务，但推荐单击【查看详情】获取建议进行调整。
-
-![](https://main.qcloudimg.com/raw/d9928bddb44c10f96302d8a70de274e2.png)
-
-7. 返回数据同步任务列表，任务开始进入“运行中”状态。
-
-![](https://main.qcloudimg.com/raw/da72a6443564afa7d94307968e474136.png)
-
-#### 创建同步任务二（实例B->实例C）
-等到上一个同步任务进行到“同步增量“阶段后，再配置同步任务二。
-
-![](https://main.qcloudimg.com/raw/bf38465e1137cf01f3b52136999a553b.png)
-
+#### 创建同步任务二（实例 B > 实例 C）
+等到上一个同步任务进行到**同步增量**阶段后，再配置同步任务二。
+![](https://main.qcloudimg.com/raw/f94d45233fb17488cf1106701b6e53bc.png)
 同步任务二和同步任务一操作基本一致，以下仅对差异点进行详细说明。
 
 1. 设置同步源和目标数据库。
-
-   源实例设置和目标实例设置中分别填入实例  B 和实例 C 的数据。
-
+源实例设置和目标实例设置中分别填入实例  B 和实例 C 的数据。
 2. 设置同步选项和同步对象。
-
-   - 初始化类型：只选择全量数据初始化，不选择结构初始化。
-   - 已存在同名表：忽略并继续执行。
-   - 冲突处理机制：请用户自行选择。
-   - 同步操作类型：不选择 DDL。多对一同步仅支持在一个同步任务选择 DDL。本场景中在任务一中选择 DDL，其他任务中不选择。
-
-![](https://main.qcloudimg.com/raw/d8ecca3f5a8f5bbed768c85cec658160.png)
+  - 初始化类型：只选择全量数据初始化，不选择结构初始化。
+  - 已存在同名表：忽略并继续执行。
+  - 冲突处理机制：请用户自行选择。
+  - 同步操作类型：不选择 DDL。多对一同步仅支持在一个同步任务选择 DDL。本场景中在任务一中选择 DDL，其他任务中不选择。
+![](https://main.qcloudimg.com/raw/74feffa8be9e790e8f1f183d5990fc8c.png)
 
 #### 结束同步任务
+如不需要同步任务，可选择**操作**列的**更多** > **结束**，关闭同步任务。
 
-如不需要同步任务，可选择“操作”列的【更多】 >【结束】，关闭同步任务。
