--- a/product/数据库/数据传输服务DTS/最佳实践/双向同步.md
+++ b/product/数据库/数据传输服务DTS/最佳实践/双向同步.md
@@ -46,7 +46,7 @@
 <table>
 <tr><th width="16%">场景</th> <th width="14%">时间要求</th> <th width="12%">同步任务</th><th width="14%">初始化类型</th><th width="14%">已存在同名表</th><th width="16%">冲突处理机制</th><th width="18%">同步操作类型</th></tr>
 <tr>
-<td rowspan="2">场景一：实例 A 有库表结构和数据，实例 B 为空</td><td rowspan="2">需要等任务一进行到“同步增量”阶段再创建任务二</td><td>任务一：正向同步</td><td>结构初始化+全量数据初始化</td><td>前置校验并报错</td><td rowspan="6">请用户自行选择。<li>示例：如果某个主键发生冲突，用户需要以A的内容为准，则任务一选择冲突覆盖，任务二选择冲突忽略或者冲突报错。</li><li>冲突策略的生效对象仅对当前发生主键冲突时的主键数据。</td><td rowspan="6"><li>DDL 最多支持在一个任务中选择。</li><li>除 DDL 外，其他操作类型两个任务保持一致。</li></td></tr>
+<td rowspan="2">场景一：实例 A 有库表结构和数据，实例 B 为空</td><td rowspan="2">需要等任务一进行到“同步增量”阶段再创建任务二</td><td>任务一：正向同步</td><td>结构初始化 + 全量数据初始化</td><td>前置校验并报错</td><td rowspan="6">请用户自行选择。<li>示例：如果某个主键发生冲突，用户需要以 A 的内容为准，则任务一选择冲突覆盖，任务二选择冲突忽略或者冲突报错。</li><li>冲突策略的生效对象仅对当前发生主键冲突时的主键数据。</td><td rowspan="6"><li>DDL 最多支持在一个任务中选择。</li><li>除 DDL 外，其他操作类型两个任务保持一致。</li></td></tr>
 <tr>
 <td>任务二：反向同步</td><td>不选择</td><td>忽略并继续执行</td></tr>
 <tr>
@@ -81,7 +81,7 @@
 </tbody></table>
 2. 购买完成后，返回 [数据同步列表](https://console.cloud.tencent.com/dts/replication)，可看到刚创建的数据同步任务，刚创建的同步任务需要进行配置后才可以使用。
 3. 在数据同步列表，单击**操作**列的**配置**，进入配置同步任务页面。
-![](https://main.qcloudimg.com/raw/61e86b4c68f210359db39c3cd731f9e6.png)
+![](https://main.qcloudimg.com/raw/4f0f48fb05db1a964cd160adeea09d18.png)
 4. 在配置同步任务页面，配置源端实例、帐号密码，配置目标端实例、帐号和密码，测试连通性后，单击**下一步**。
 <table>
 <thead><tr><th>设置项</th><th>参数</th><th>描述</th></tr></thead>
@@ -120,7 +120,7 @@
 <td>接入类型</td><td>选择目标数据库 B 接入类型。</td></tr>
 </tbody></table>
 <img src="https://main.qcloudimg.com/raw/e10c2ef19826e817ccefeae1a4243189.png"  style="zoom:80%;">
-5. 在设置同步选项和同步对象页面，将对数据初始化选项、数据同步选项、同步对象选项进行设置，在设置完成后单击【**保存并下一步**】。
+5. 在设置同步选项和同步对象页面，将对数据初始化选项、数据同步选项、同步对象选项进行设置，在设置完成后单击**保存并下一步**。
 <table>
 <thead><tr><th>设置项</th><th>参数</th><th>描述</th></tr></thead>
 <tbody>
