--- a/product/大数据与AI/万象优图2.0/购买说明/资源包（预付费）.md
+++ b/product/大数据与AI/万象优图2.0/购买说明/资源包（预付费）.md
@@ -19,7 +19,7 @@
 | [内容识别资源包](#10)    | 用于抵扣图片标签、二维码识别的使用量。                     |
 |  [内容审核资源包](#7) | 用于抵扣图片审核、视频审核、音频审核、文本审核的使用量。  |
 | [人脸特效资源包](#8) | 用于抵扣人脸特效的使用量。                     |
-| [流量资源包](#9)     | 用于抵扣 CDN 回源流量和外网出流量。                      |
+| [流量资源包](#9)     | 用于抵扣数据万象的 CDN 回源流量和数据万象的外网出流量。                      |
 
 >? 表格中费用项的更多介绍，请参见 [计费与定价](https://cloud.tencent.com/document/product/460/6970) 文档。
 >
@@ -696,7 +696,7 @@
 
 **流量资源包抵扣比例**
 
-流量资源包可以抵扣 CDN 回源流量和外网出流量两种流量类型，不同类型有对应的抵扣比例，抵扣比例如下：
+流量资源包可以抵扣数据万象的 CDN 回源流量和数据万象的外网出流量两种流量类型，不同类型有对应的抵扣比例，抵扣比例如下：
 
 >? 流量资源包优先抵扣外网出流量。
 >
