--- a/product/数据库/数据传输服务DTS/数据迁移(NewDTS)/01 数据迁移支持的数据库.md
+++ b/product/数据库/数据传输服务DTS/数据迁移(NewDTS)/01 数据迁移支持的数据库.md
@@ -22,9 +22,5 @@
 
 > ?
 >
-> - 入云指目标数据库为腾讯云数据库产品的场景，出云指目标数据库为非腾讯云数据库产品的场景。
-> - 迁移要求：
->    - 源数据库或目标数据库中至少有一方为腾讯云数据库实例。
->    - 目标数据库版本必须大于等于源库版本（PostgreSQL 除外，PostgreSQL 支持降版本迁移），如5.5版本支持迁移到5.6、5.7及更高版本。
-> - 跨版本迁移指跳过中间的一个或多个版本，如5.5版本迁移到5.7版本，跳过中间的5.6版本。
+> 入云指目标数据库为腾讯云数据库产品的场景。
 
