--- a/product/企业应用/增值电信/快速入门.md
+++ b/product/企业应用/增值电信/快速入门.md
@@ -22,4 +22,4 @@
 
 ### 步骤6：服务验收
 
-进入 [增值电信控制台](https://console.cloud.tencent.com/vat)，根据您提交的许可证业务类型，您可单击【ICP 申请服务】、【EDI 申请服务】中查看服务进度，同时可以进入【ICP 资质】、【EDI 资质】查看已申请成功资质信息。
+进入 [增值电信控制台](https://console.cloud.tencent.com/vat)，根据您提交的许可证业务类型，您可单击 **ICP 申请服务**、**EDI 申请服务**中查看服务进度，同时可以进入 **ICP 资质**、**EDI 资质**查看已申请成功资质信息。
