--- a/product/安全服务/BGP 高防 IP/DDOS 边缘安全防护/购买指南/计费概述.md
+++ b/product/安全服务/BGP 高防 IP/DDOS 边缘安全防护/购买指南/计费概述.md
@@ -8,9 +8,7 @@ DDoS 边缘防护为腾讯云内外用户在境外的业务，提供针对 DDoS 
 
 
 ## 计费详情
-- 基础费用：18000元/账号/月。
->!一个账号多个 IP 均收取一份账号的基础费用。
->
+- 基础费用：18000元/主账号/月。
 - 流量计费采用月度阶梯累进模式，阶梯价格如下：
 
 | 流量阶梯（元/GB） | 南美 SA | 中东 ME | 亚太3区 AP3 | 亚太2区 AP2 | 亚太1区 AP1 | 欧洲 EU | 北美 NA | 非洲 AA |
