--- a/product/计算与网络/无服务器云函数/代码开发/Python/日志说明.md
+++ b/product/计算与网络/无服务器云函数/代码开发/Python/日志说明.md
@@ -5,17 +5,18 @@
 - logging 模块
 
 例如，执行以下代码，您可在函数日志中查询输出内容。
-
-```python
+<dx-codeblock>
+::: python
 import logging
 logger = logging.getLogger()
 logger.setLevel(logging.INFO)
 
 def main_handler(event, context):
-      logger.info('got event{}'.format(event))
-      print("got event{}".format(event))
-      return 'Hello World!'  
-```
+	logger.info('got event{}'.format(event))
+	print("got event{}".format(event))
+	return 'Hello World!'  
+:::
+</dx-codeblock>
 
 
 
@@ -38,15 +39,16 @@ def main_handler(event, context):
 当函数输出的单行日志为 JSON 格式时，JSON 内容将被解析并在投递至日志服务时按`字段:值`的方式进行投递。JSON 内容的解析仅能解析第一层，更多的嵌套结构将作为值进行记录。
 
 您可执行以下代码进行测试：
-
-```python
+<dx-codeblock>
+::: python
 # -*- coding: utf8 -*-
 import json
 		
 def main_handler(event, context):
 	print(json.dumps({"key1": "test value 1","key2": "test value 2"}))
 	return("Hello World!")
-```
+:::
+</dx-codeblock>
 
 ### 检索方法
 
