--- a/product/数据库/数据传输服务DTS/最佳实践/双向同步.md
+++ b/product/数据库/数据传输服务DTS/最佳实践/双向同步.md
@@ -161,7 +161,7 @@
  - 已存在同名表：忽略并继续执行。
  - 冲突处理机制：与任务一选择的保持一致。
  - 同步操作类型：双向同步仅支持在一个同步任务中选择 DDL。本场景在任务一中选择 DDL，在任务二中不选择。
- - <img src="https://main.qcloudimg.com/raw/112d2cff5975d6847f840e39f9a1d39b.png" style="zoom:67%;" />
+<img src="https://main.qcloudimg.com/raw/112d2cff5975d6847f840e39f9a1d39b.png" style="zoom:67%;" />
 
 #### 结束同步任务
-如不需要同步任务，可选择**操作**列的**更多** >**结束**，关闭同步任务。
+如不需要同步任务，可选择**操作**列的**更多** > **结束**，关闭同步任务。
