--- a/product/域名与网站/域名注册/故障处理/域名转入相关/域名转入时提示 “腾讯云暂未接入该域名后缀，暂不支持该域名转入”.md
+++ b/product/域名与网站/域名注册/故障处理/域名转入相关/域名转入时提示 “腾讯云暂未接入该域名后缀，暂不支持该域名转入”.md
@@ -3,11 +3,10 @@
 ![](https://main.qcloudimg.com/raw/2b1965d3ff91409d7b81204a9cfbcac6.png)
 
 
-### 可能原因
+## 可能原因
 腾讯云暂未接入该域名后缀。
 
-### 解决办法
+## 解决办法
 请等待腾讯云接入该域名后缀后，再进行转入。腾讯云支持转入后缀请参见 [域名价格总览](https://buy.cloud.tencent.com/domain?price=1)。
-
 
 
