--- a/product/数据库/数据传输服务DTS/数据迁移(NewDTS)/01 数据迁移支持的数据库.md
+++ b/product/数据库/数据传输服务DTS/数据迁移(NewDTS)/01 数据迁移支持的数据库.md
@@ -20,7 +20,5 @@
 | MariaDB > MariaDB | 入云 | <li>自建 MariaDB 10.0.1、10.1.9<li>云数据库 MariaDB 10.1.9 | 云数据库 MariaDB 10.1.9 | <li>结构迁移<li>全量迁移<li>全量+增量迁移 | - |
 | MariaDB（Percona）> MariaDB（Percona） | 入云         | <li>自建 MariaDB（Percona） 5.7<li>云数据库 MariaDB（Percona） 5.7 | 云数据库  MariaDB（Percona）5.7 | <li>结构迁移<li>全量迁移<li>全量+增量迁移 | - |
 
-> ?
->
-> 入云指目标数据库为腾讯云数据库产品的场景。
+> ?入云指目标数据库为腾讯云数据库产品的场景。
 
