--- a/product/计算与网络/本地专用集群/产品简介/访问管理/访问管理概述.md
+++ b/product/计算与网络/本地专用集群/产品简介/访问管理/访问管理概述.md
@@ -25,7 +25,7 @@ CDC 部分 API 操作支持资源级权限，意味着对于该类 API 操作，
 </thead>
 <tbody><tr>
 <td>了解策略基本结构</td>
-<td><a href="https://cloud.tencent.com/document/product/213/10313#.E7.AD.96.E7.95.A5.E8.AF.AD.E6.B3.95" target="_blank">策略语法</a></td>
+<td><a href="https://cloud.tencent.com/document/product/1346/60963#celueyufa" target="_blank">策略语法</a></td>
 </tr>
 <tr>
 <td>在策略中定义操作</td>
@@ -37,7 +37,7 @@ CDC 部分 API 操作支持资源级权限，意味着对于该类 API 操作，
 </tr>
 <tr>
 <td>使用条件来限制策略</td>
-<td><a href="https://cloud.tencent.com/document/product/1346/60963#tiaojianmiyue" target="_blank">CVM 的条件密钥</a></td>
+<td><a href="https://cloud.tencent.com/document/product/1346/60963#tiaojianmiyue" target="_blank">CDC 的条件密钥</a></td>
 </tr>
 <tr>
 <td>CDC 支持的资源级权限</td>
