--- a/product/安全服务/网站管家/操作指南/访问日志（新）.md
+++ b/product/安全服务/网站管家/操作指南/访问日志（新）.md
@@ -5,7 +5,11 @@
 >- 使用访问日志功能，需要先 [购买安全日志服务包](https://cloud.tencent.com/document/product/627/11730)，并且根据 [操作步骤](#sysm) 启用访问日志开关。只有开启访问日志开关的域名，Web 应用防火墙才会记录该域名的访问日志。
 >- 如需关闭访问日志功能，可以在 [续费管理](https://console.cloud.tencent.com/account/renewal) 中，找到相应计费项目，取消续费即可。
 
-## 操作步骤
+## 操作步骤(id:sysm)
+### 启用访问日志
+登录 [Web 应用防火墙控制台](https://console.cloud.tencent.com/guanjia/waf/config)，在左侧导航栏中，选择【实例管理】>【域名列表】，进入域名列表页面，在域名列表中选择域名，单击开启访问日志开关。 
+![](https://main.qcloudimg.com/raw/a455217d951b93b8a9b2d73dccce02f7.png)
+
 ### 查看日志
 1. 登录 [Web 应用防火墙控制台](https://console.cloud.tencent.com/guanjia/waf/overview)，在左侧导航栏中，选择【日志服务】>【日志服务（新）】，进入日志服务（新）页面。
 2. 在日志服务（新）页面，单击左上角的域名下拉框，选择所需域名后，单击【确定】，即可该域名的访问日志。
