--- a/product/视频服务/直播/3-快直播/快直播与标准直播的区别.md
+++ b/product/视频服务/直播/3-快直播/快直播与标准直播的区别.md
@@ -9,7 +9,7 @@
 ![](https://main.qcloudimg.com/raw/217226af104bf965766340270b447321.png)
 
 ## 延迟对比
-目前标准直播的 FLV 协议延迟一般在 2秒 - 10秒左右，它的延迟因素主要是 GOP 大小和 TCP 弱网传输积压。HLS 的延迟更大，一般是几秒到几十秒，它的延迟因素主要是 GOP 大小和 TS 大小，HLS 是以文件索引和下载的方式，它每个文件的的大小限制了它的延迟，很多播放器要等3个 TS 才播放，而3个 TS 可能就有几十秒了，所以 HLS 在标准直播中延迟最高。
+目前标准直播的 FLV 协议延迟一般在 2秒 - 10秒左右，它的延迟因素主要是 GOP 大小和 TCP 弱网传输积压。HLS 的延迟更大，一般是几秒到几十秒，它的延迟因素主要是 GOP 大小和 TS 大小，HLS 是以文件索引和下载的方式，它每个文件的大小限制了它的延迟，很多播放器要等3个 TS 才播放，而3个 TS 可能就有几十秒了，所以 HLS 在标准直播中延迟最高。
 
 快直播采用 WebRTC 进行低延时改造的重要考量。流行的 Chrome、Safari 等大部分浏览都已经支持 WebRTC 标准，还有成熟的开源 WebRTC SDK 能让我们方便地进行优化和定制。这样我们既能通过浏览器提供标准的 WebRTC 直播能力，也能通过定制 SDK 提供升级的更完善的低延时直播能力，通常快直播的延迟是在 300ms - 1000 ms。
 ![](https://main.qcloudimg.com/raw/e8203480ef0cf79613ab340e9c37f243.png)
