--- a/product/安全服务/BGP 高防 IP/DDOS 边缘安全防护/操作指南/CC 防护/精准防护.md
+++ b/product/安全服务/BGP 高防 IP/DDOS 边缘安全防护/操作指南/CC 防护/精准防护.md
@@ -1,4 +1,4 @@
- DDoS 边缘防护支持对已接入防护的网站业务配置精准防护策略。开启精确访问控制后您可以以常见的 HTTP 字段（例如：URI、UA、Cookie、Referer、Accept 等），作为条件组合防护策略来筛选访问请求，并将已命中条件的请求，设置人机校验或丢弃策略动作。精准防护支持业务场景定制化的防护策略，可用于精准定制针对性的 CC 防御。
+ DDoS 边缘防护支持对已接入防护的网站业务配置精准防护策略。开启精确访问控制后您可以使用常见的 HTTP 字段（例如：URI、UA、Cookie、Referer、Accept 等），作为条件组合防护策略来筛选访问请求，并将已命中条件的请求，设置人机校验或丢弃策略动作。精准防护支持业务场景定制化的防护策略，可用于精准定制针对性的 CC 防御。
 
 匹配条件定义了要识别的请求特征，具体指访问请求中 HTTP 字段属性特征。精确防护规则支持匹配的 HTTP 字段如下表所示。
 
