--- a/product/计算与网络/本地专用集群/产品简介/访问管理/访问管理示例.md
+++ b/product/计算与网络/本地专用集群/产品简介/访问管理/访问管理示例.md
@@ -63,7 +63,7 @@
 - **方案 A**
 企业账号 CompanyExample 直接将预设策略 `QcloudCDCFullAccess` 授权给子账号 Developer。授权方式请参考 [授权管理](https://cloud.tencent.com/document/product/598/10602)。
 - **方案 B**
- 1. 根据以下策略语法，创建一个 [自定义策略](#CAMCustomPolicy)。
+ 1. 根据以下策略语法，创建一个自定义策略。
 ```
  {
     "version": "2.0",
