--- a/product/安全服务/态势感知/操作指南/资产中心/查看和处理漏洞.md
+++ b/product/安全服务/态势感知/操作指南/资产中心/查看和处理漏洞.md
@@ -48,8 +48,10 @@
 >
 ![](https://main.qcloudimg.com/raw/2e0567295ee4e0d3f162ed8800b37850.png)
 	- **忽略记录**
-在漏洞管理页，单击“忽略记录”可查看忽略记录，在忽略记录列表页可取消忽略。取消忽略后将恢复对该漏洞的该资产的检测。
-![](https://main.qcloudimg.com/raw/b18a94874392c33b68bfce8d045a7c78.png)
+在漏洞管理页，单击“忽略记录”可查看已忽略检测的记录，在忽略记录列表页可取消忽略。取消忽略后将恢复对该漏洞的该资产的检测。
+ - 方式1：在忽略记录列表页，勾选目标漏洞，单击列表上方【取消忽略】，可批量取消忽略记录。
+ - 方式2：在忽略记录列表页，单击目标漏洞右侧操作栏的【取消忽略】，可取消对应的忽略记录。
+![](https://main.qcloudimg.com/raw/5d1c7416b6e2c9930f96cd0fac75a819.png)
 	- **漏洞详情**
 	在漏洞明细列表，单击目标漏洞右侧操作栏的【查看详情】，进入详情页，可查看该漏洞的基础信息。
 	- **漏洞同步**
