--- a/product/计算与网络/云联网/操作指南/删除云联网实例.md
+++ b/product/计算与网络/云联网/操作指南/删除云联网实例.md
@@ -2,7 +2,7 @@
 >
 
 1. 登录 [私有网络控制台](https://console.cloud.tencent.com/vpc/vpc?rid=1)。
-2. 单击左侧目录中的【云联网】，进入云联网管理页面。
-3. 在云联网列表中，找到需要删除的云联网实例所在行，单击操作栏中的【删除】并确认操作即可。
+2. 单击左侧目录中的**云联网**，进入云联网管理页面。
+3. 在云联网列表中，找到需要删除的云联网实例所在行，单击操作栏中的**删除**并确认操作即可。
 ![](https://main.qcloudimg.com/raw/a2825e0bd11a1bf8ecda2e9017c56c2d.png)
 
