--- a/product/移动与通信/云开发低代码平台/最佳实践/从0到1开发一个问卷小程序.md
+++ b/product/移动与通信/云开发低代码平台/最佳实践/从0到1开发一个问卷小程序.md
@@ -3,30 +3,32 @@
 
 ## 概述
 基于腾讯云微搭低代码平台开发一款问卷小程序需要经过四个步骤：
-1. 新建低码应用。
-2. 根据需求定义数据源。
-3. 按照需求设计页面（主要完成布局的添加和组件的定义）。
-4. 本地构建及预览发布。
+<dx-steps>
+-[新建低码应用](#step1)
+-[根据需求定义数据源](#step2)
+-[按照需求设计页面（主要完成布局的添加和组件的定义）](#step3)
+-[本地构建及预览发布](#step4)
+</dx-steps>
 
 只需简单几步就可以用腾讯云微搭低代码平台独立开发一款属于自己的应用。
 
-## 步骤1：新建低码应用
+## 步骤1：新建低码应用[](id:step1)
 ### 创建应用
 1. 单击左侧导航栏的【应用管理】，在中间的内容区域单击【创建空白应用】。
  ![](https://main.qcloudimg.com/raw/e63e0b9c8f3ced70602e4bd6589ba6c6.png)
-2. 在弹出的界面选择普通应用，单击【下一步】
+2. 在弹出的界面选择普通应用，点击【下一步】
  ![](https://main.qcloudimg.com/raw/5546446dc0f1c7759e0024e3c427008b.png)
 3. 输入应用名称和应用标识，单击【确定】创建应用。
  ![](https://main.qcloudimg.com/raw/8ab91de1d5d45282751725699d74c972.png)
 
-##  步骤2：定义数据源
+##  步骤2：定义数据源[](id:step2)
 传统开发流程需要先进行需求分析，分析完成后需要按照需求进行数据库的设计，在腾讯云微搭低代码平台中，只需在控制台左侧的【数据源管理】中自定义数据源即可，无需单独构建数据库。
  ![](https://main.qcloudimg.com/raw/dd7848da2252cd63b082f7208a8aaa50.png)
 1. 单击【新建自建数据源】按钮。
  ![](https://main.qcloudimg.com/raw/0c6ad93c1dc8498905064b7369c47278.png)
 2. 在打开的页面里，数据源名称输入问卷调查，数据源标识输入 survey。
  ![](https://main.qcloudimg.com/raw/f4ea83150bd2fd8648bec26a545e18d6.png)
-3. 单击【编辑按钮】进行字段的添加
+3. 点击【编辑按钮】进行字段的添加
  ![](https://main.qcloudimg.com/raw/ab855a3708726b9010f3bee282c7d1ae.png)
 4. 单击【添加字段】按钮，添加数据源相关字段。
  ![](https://main.qcloudimg.com/raw/e58874a829600a136c6d59d9724dcc4e.png)
@@ -41,7 +43,7 @@
 4. 由于参与问卷调查用户只需提交即可，因此设置【动作】时只需勾选【新增】方法，其他均保持默认。设置完毕后需要单击页面底部的【立即创建】按钮，否则刚才添加的字段都不生效。
 ![](https://main.qcloudimg.com/raw/0fc80e070bbc3266e8c314f8fdaab666.png) 
 
-## 步骤3：设计页面
+## 步骤3：设计页面[](id:step3)
 ### 创建页面
 1. 数据源设置完毕后就需要创建页面，单击【应用管理】，找到刚才创建的应用，单击应用名称进入应用编辑器。
  ![](https://main.qcloudimg.com/raw/031265c3ebc632c4ba151d980b047391.png)
@@ -98,17 +100,17 @@
 9. 选择【表单容器】，切换到【事件】页签，选择事件为 submit。
  ![](https://main.qcloudimg.com/raw/55978ebf3100c1d6ac522c0628fb3a79.png)
  数据源名称选择问卷调查，方法名设置为 创建单条记录(create)，传入参数设置为  event.detail。
- 类似地，增加单击提交按钮后的提示内容。
- - 添加触发条件【dataSource 成功】，动作类型【平台方法】，执行动作为【showToast 显示信息】，单击确认添加，并将标题设为【提交成功】，图标为 success。
- - 添加触发条件【dataSource 失败】，动作类型【平台方法】，执行动作为【showToast 显示信息】，单击确认添加，并将标题设为【提交失败】，图标为 error。
+ 类似地，增加点击提交按钮后的提示内容。
+ - 添加触发条件【dataSource 成功】，动作类型【平台方法】，执行动作为【showToast 显示信息】，点击确认添加，并将标题设为【提交成功】，图标为 success。
+ - 添加触发条件【dataSource 失败】，动作类型【平台方法】，执行动作为【showToast 显示信息】，点击确认添加，并将标题设为【提交失败】，图标为 error。
  ![](https://main.qcloudimg.com/raw/adef9d38d6bf9df41102c82b58fe31b0.png)
   ![](https://main.qcloudimg.com/raw/726742bb0260df7d94e32460c83b84af.png)
 ### 尾部编写
 选中【插槽 footer】，单击组件通用类目中的【文本】组件，并将文本内容设置为版权信息。
  ![](https://main.qcloudimg.com/raw/79dbfc683b13cde13d0583dc35e83fde.png)
 
-## 步骤4：代码构建与发布
-1. 代码改造好后就可以进行预览了，单击导航条【预览】。可以通过扫码或者单击实时预览的链接进行实时预览。
+## 步骤4：代码构建与发布[](id:step4)
+1. 代码改造好后就可以进行预览了，单击导航条【预览】。可以通过扫码或者点击实时预览的链接进行实时预览。
 ![](https://main.qcloudimg.com/raw/37de84cc7a0e351c2de05dd6318b5b98.png)
 2. 构建成功后可以查页面的效果。
  ![](https://main.qcloudimg.com/raw/ed6391db4d73b2fbc54de2eb8413b736.png)
@@ -116,9 +118,9 @@
 ## 数据管理
 用户填写了问卷调查后，管理员可以单击【数据源管理】，查看用户提交的问卷信息数据，单击【数据管理后台】，腾讯云微搭低代码 LowCode 平台自带内容管理（CMS）后台可以查看和管理数据。
  ![](https://main.qcloudimg.com/raw/bc04518277e2b51f15a999c44380dcc1.png)
-进入页面后可以看到已创建的历史项目，单击刚刚创建的新项目。
+进入页面后可以看到已创建的历史项目，点击刚刚创建的新项目。
  ![](https://main.qcloudimg.com/raw/e0f52bd493e3944d391eab538fe71f11.png)
 选中表单即可查看数据。
  ![](https://main.qcloudimg.com/raw/bc5d2c5c63f7aef8b18c29f48f6677de.png)
-您也可以直接在控制台的【应用管理】中找到刚才的应用，单击应用卡片，在【数据管理后台】中找到预览/发布的应用所对应的数据。【正式数据】对应的是使用发布产生的应用数据，【测试数据】是使用预览产生的应用数据。
+您也可以直接在控制台的【应用管理】中找到刚才的应用，点击应用卡片，在【数据管理后台】中找到预览/发布的应用所对应的数据。【正式数据】对应的是使用发布产生的应用数据，【测试数据】是使用预览产生的应用数据。
  ![](https://main.qcloudimg.com/raw/d82efa122bfa83246eb8a3dc05a466cd.png)
