--- a/product/存储与CDN/对象存储 4.0/SDK文档/.NET SDK/对象操作/下载对象.md
+++ b/product/存储与CDN/对象存储 4.0/SDK文档/.NET SDK/对象操作/下载对象.md
@@ -58,8 +58,18 @@ try {
 [//]: #	".cssg-snippet-transfer-download-resumable"
 
 ```cs
-COSXMLDownloadTask downloadTask = new COSXMLDownloadTask(request);
-downloadTask.SetResumableDownload(true);
+ COSXMLDownloadTask downloadTask = new COSXMLDownloadTask(request);
+ //开启断点续传，当本地存在未下载完成文件时，追加下载到文件末尾
+ //本地文件已存在部分内容可能导致下载失败，请删除重试
+ downloadTask.SetResumableDownload(true);
+ try {
+   COSXML.Transfer.COSXMLDownloadTask.DownloadTaskResult result = await 
+   transferManager.DownloadAsync(downloadTask);
+   Console.WriteLine(result.GetResultInfo());
+   string eTag = result.eTag;
+ } catch (Exception e) {
+   Console.WriteLine("CosException: " + e);
+ }
 ```
 
 > ?更多完整示例，请前往 [GitHub](https://github.com/tencentyun/cos-snippets/tree/master/dotnet/dist/TransferDownloadObject.cs) 查看。
