--- a/product/存储与CDN/对象存储 4.0/SDK文档/.NET SDK/对象操作/下载对象.md
+++ b/product/存储与CDN/对象存储 4.0/SDK文档/.NET SDK/对象操作/下载对象.md
@@ -12,7 +12,7 @@ SDK 所有接口的具体参数与方法说明，请参考 [SDK API](https://cos
 
 ## 高级接口（推荐）
 
-### 下载对象
+### 下载对象（断点续传）
 
 高级接口支持暂停、恢复以及取消下载请求，同时支持断点下载功能。
 
@@ -59,7 +59,17 @@ try {
 
 ```cs
 COSXMLDownloadTask downloadTask = new COSXMLDownloadTask(request);
-downloadTask.SetResumableDownload(true);
+ //开启断点续传，当本地存在未下载完成文件时，追加下载到文件末尾
+ //本地文件已存在部分不符合本次下载的内容，可能导致下载失败，请删除文件重试
+ downloadTask.SetResumableDownload(true);
+ try {
+   COSXML.Transfer.COSXMLDownloadTask.DownloadTaskResult result = await 
+   transferManager.DownloadAsync(downloadTask);
+   Console.WriteLine(result.GetResultInfo());
+   string eTag = result.eTag;
+ } catch (Exception e) {
+   Console.WriteLine("CosException: " + e);
+ }
 ```
 
 > ?更多完整示例，请前往 [GitHub](https://github.com/tencentyun/cos-snippets/tree/master/dotnet/dist/TransferDownloadObject.cs) 查看。
