--- a/product/移动与通信/云开发低代码平台/最佳实践/基于模板开发一个问卷小程序.md
+++ b/product/移动与通信/云开发低代码平台/最佳实践/基于模板开发一个问卷小程序.md
@@ -16,7 +16,7 @@
 1. 单击名称即可浏览表中的字段名称、字段标识和数据类型等详细信息。
 ![](https://main.qcloudimg.com/raw/332f19682cdf1430c7ed0eea01494466.png)
 
-2. 同时，支持在数据源管理页面自定义添加业务所需的字段，需要先点击【编辑】按钮进入到编辑模式，然后单击【添加字段】。
+2. 同时，支持在数据源管理页面自定义添加业务所需的字段，需要先单击【编辑】按钮进入到编辑模式，然后单击【添加字段】。
  ![](https://main.qcloudimg.com/raw/c0d150868e685e1baef51f8c24a9a7a0.png)
   ![](https://main.qcloudimg.com/raw/acbe98285dffd3448e189253d54126cb.png)
 3. 可以增加一个职业的字段，字段标识为 job，字段类型为字符串，是否必填选择【是】，是否枚举选择【否】
@@ -64,7 +64,7 @@
  ![](https://main.qcloudimg.com/raw/c79a278d2b6adca69748f70d71951b42.png)
 
 ## 步骤4：代码构建与发布
-1. 代码改造好后就可以进行预览了，单击导航条【预览】。可以通过扫码或者点击实时预览的链接进行实时预览。
+1. 代码改造好后就可以进行预览了，单击导航条【预览】。可以通过扫码或者单击实时预览的链接进行实时预览。
 ![](https://main.qcloudimg.com/raw/fd552783fc29837f78bc9ed70e5c5724.png)
 2. 构建成功后可以查页面的效果。
  ![](https://main.qcloudimg.com/raw/899b425e9dd0c4a98a61c307935a162d.png)
@@ -72,9 +72,9 @@
 ## 数据管理
 用户填写了问卷调查后，管理员可以单击【数据源管理】，查看用户提交的问卷信息数据，单击【数据管理后台】，腾讯云微搭低代码 LowCode 平台自带内容管理（CMS）后台可以查看和管理数据。
  ![](https://main.qcloudimg.com/raw/c70bd284d5626ccd51ab1e8b2c3279fd.png)
-进入页面后可以看到已创建的历史项目，点击刚刚创建的新项目。
+进入页面后可以看到已创建的历史项目，单击刚刚创建的新项目。
  ![](https://main.qcloudimg.com/raw/045ccfa3ae8d9a45e83640bd45be1554.png)
 选中表单即可查看数据。
  ![](https://main.qcloudimg.com/raw/c438f694d23ed002f8968a832e231d63.png)
-您也可以直接在控制台的【应用管理】中找到刚才的应用，点击应用卡片，在【数据管理后台】中找到预览/发布的应用所对应的数据。【正式数据】对应的是使用发布产生的应用数据，【测试数据】是使用预览产生的应用数据。
+您也可以直接在控制台的【应用管理】中找到刚才的应用，单击应用卡片，在【数据管理后台】中找到预览/发布的应用所对应的数据。【正式数据】对应的是使用发布产生的应用数据，【测试数据】是使用预览产生的应用数据。
 ![](https://main.qcloudimg.com/raw/f47b9a8a2d71897712175f2459ef77b3.png)
