--- a/product/教育/智聆口语评测/常见问题.md
+++ b/product/教育/智聆口语评测/常见问题.md
@@ -9,7 +9,7 @@
 大于4K只是标准要求，对最后一个分片无限制。
 
 ### 用户发音能否返回给用户回放参考？
-可以选择保存录音，保存后会以URL的形式在结果里一起返回。移动端 SDK 可以保存录音文件到本地。详情见参数 [audiopath](https://cloud.tencent.com/document/product/884/31870) 描述。
+可以选择保存录音，保存后会以 URL 的形式在结果里一起返回。移动端 SDK 可以保存录音文件到本地。详情见参数 [audiopath](https://cloud.tencent.com/document/product/884/31870) 描述。
 
 ### 在不同模式的音频文件支持的文件大小和时长是多少？
 单词、句子和段落模式的音频文件均使用 API3.0鉴权，支持的文件大小均可达到64MB，其中单词、句子模式最大时长可达到60秒、段落模式最大时长可达到120秒。
@@ -22,7 +22,7 @@
 
 ### 如何设置分片大小?
 
-目前移动端的sdk里面可以直接修改参数fragSize来修改分片大小。其它的需要将音频文件使用分片的形式来进行分割，来达到分片处理的目的。具体参考 [发音数据传输接口附带初始化过程（常用实践）](https://cloud.tencent.com/document/product/884/32605) 参数 SeqId 和 IsEnd 的描述。
+目前移动端的 SDK 里面可以直接修改参数 fragSize 来修改分片大小。其它的需要将音频文件使用分片的形式来进行分割，来达到分片处理的目的。具体参考 [发音数据传输接口附带初始化过程（常用实践）](https://cloud.tencent.com/document/product/884/32605) 参数 SeqId 和 IsEnd 的描述。
 
 ### 分片大小设置为多大比较合适?	
 答案：如果是使用流式分片进行边录边传，分片最佳的大小与音频的格式有关，通常来说分片为500ms音频的大小为最佳，未压缩的格式大小约16K。例如一个文件大小为43.1kb，音频时长11.05s。那么分片大小为0.5x43.1÷11.05=1.95k。如果是使用流式分片进行本地音频评测，分片大小会与音频的数据量有关。推荐100k以上。如果不会出现评测超时可以增加。反则反之。
