--- a/product/移动与通信/云开发低代码平台/最佳实践/基于模板开发一个问卷小程序.md
+++ b/product/移动与通信/云开发低代码平台/最佳实践/基于模板开发一个问卷小程序.md
@@ -16,7 +16,7 @@
 1. 单击名称即可浏览表中的字段名称、字段标识和数据类型等详细信息。
 ![](https://main.qcloudimg.com/raw/332f19682cdf1430c7ed0eea01494466.png)
 
-2. 同时，支持在数据源管理页面自定义添加业务所需的字段，需要先单击【编辑】按钮进入到编辑模式，然后单击【添加字段】。
+2. 同时，支持在数据源管理页面自定义添加业务所需的字段，需要先点击【编辑】按钮进入到编辑模式，然后单击【添加字段】。
  ![](https://main.qcloudimg.com/raw/c0d150868e685e1baef51f8c24a9a7a0.png)
   ![](https://main.qcloudimg.com/raw/acbe98285dffd3448e189253d54126cb.png)
 3. 可以增加一个职业的字段，字段标识为 job，字段类型为字符串，是否必填选择【是】，是否枚举选择【否】
@@ -30,9 +30,11 @@
 7. 由于参与问卷调查的用户只需提交就可以，因此【动作】只勾选【新增】方法，其他都保持默认。设置完毕后单击页面底部的【确定】，否则刚才添加的字段都不生效。
 
 ## 步骤3：修改页面
-1. 数据源设置完毕后就需要创建页面，单击【应用管理】，找到刚才创建的应用，单击应用名称进入应用编辑器。
+数据源设置完毕后就需要创建页面，单击【应用管理】，找到刚才创建的应用，单击应用名称进入应用编辑器。
  ![](https://main.qcloudimg.com/raw/e1898c9d59f6fa88a1ef15bad33ca662.png)
+ 应用编辑器操作栏概览如下图所示：
   ![](https://main.qcloudimg.com/raw/de157ac0d286ab5415fc313c36b9e34c.png)
+	
 ### 代码解析
 下面逐条分析当下使用模板的结构。首先是有个垂直布局组件，它将页面分成了三个部分：
 1. 头部（header）：头部放置小程序的介绍，向用户告知本次调查的目的。对应模板中的【插槽 header】。
@@ -58,13 +60,14 @@
 4. 选中刚刚添加的【表单单选】组件，设置表单字段名称（字段名称填写为 job），组件的标题（我的职业是），将布局方式改为垂直，并依次增加单选项的内容，单选项名称分别为前端开发、后台开发、设计师、运营、产品策划、其他，单选项的值分别设置为first、second、third、fourth、five、six。单选内容的 value 会被提交到数据库里。
 ![](https://main.qcloudimg.com/raw/fc5ec4a7f8302f1ae946edef45417dda.png) 
 5. 按照同样的方法增加第二个调查项,需要注意的是第二个调查项的字段名称需要填写为 industry，标题设置为“我所属的行业是”，单选项名称分别为金融、工业、教育、医疗、政务、IT互联网、其他，单选项的值分别为first、second、third、fourth、five、six、seven。单选内容的 value 会被提交到数据库里。
-![](https://main.qcloudimg.com/raw/fcddeb1a020b21c57d05c48fbf5bcee6.jpg)
+
+
 ### 改造尾部
 我们在问卷尾部展示版权信息。选中【插槽 footer】插槽里的【文本】组件，可以在右侧的属性面板里修改版权信息。
  ![](https://main.qcloudimg.com/raw/c79a278d2b6adca69748f70d71951b42.png)
 
 ## 步骤4：代码构建与发布
-1. 代码改造好后就可以进行预览了，单击导航条【预览】。可以通过扫码或者单击实时预览的链接进行实时预览。
+1. 代码改造好后就可以进行预览了，单击导航条【预览】。可以通过扫码或者点击实时预览的链接进行实时预览。
 ![](https://main.qcloudimg.com/raw/fd552783fc29837f78bc9ed70e5c5724.png)
 2. 构建成功后可以查页面的效果。
  ![](https://main.qcloudimg.com/raw/899b425e9dd0c4a98a61c307935a162d.png)
@@ -72,9 +75,9 @@
 ## 数据管理
 用户填写了问卷调查后，管理员可以单击【数据源管理】，查看用户提交的问卷信息数据，单击【数据管理后台】，腾讯云微搭低代码 LowCode 平台自带内容管理（CMS）后台可以查看和管理数据。
  ![](https://main.qcloudimg.com/raw/c70bd284d5626ccd51ab1e8b2c3279fd.png)
-进入页面后可以看到已创建的历史项目，单击刚刚创建的新项目。
+进入页面后可以看到已创建的历史项目，点击刚刚创建的新项目。
  ![](https://main.qcloudimg.com/raw/045ccfa3ae8d9a45e83640bd45be1554.png)
 选中表单即可查看数据。
  ![](https://main.qcloudimg.com/raw/c438f694d23ed002f8968a832e231d63.png)
-您也可以直接在控制台的【应用管理】中找到刚才的应用，单击应用卡片，在【数据管理后台】中找到预览/发布的应用所对应的数据。【正式数据】对应的是使用发布产生的应用数据，【测试数据】是使用预览产生的应用数据。
-![](https://main.qcloudimg.com/raw/f47b9a8a2d71897712175f2459ef77b3.png)
+您也可以直接在控制台的【应用管理】中找到刚才的应用，点击应用卡片，在【数据管理后台】中找到预览/发布的应用所对应的数据。【正式数据】对应的是使用发布产生的应用数据，【测试数据】是使用预览产生的应用数据。
+![](https://main.qcloudimg.com/raw/048db87a1f17bec8455fd8b528b55b3c.png)
