--- a/product/计算与网络/容器服务/控制台指南（新版）/存储管理/使用云硬盘CBS/云硬盘使用说明.md
+++ b/product/计算与网络/容器服务/控制台指南（新版）/存储管理/使用云硬盘CBS/云硬盘使用说明.md
@@ -1,5 +1,7 @@
 ## 操作场景
 腾讯云容器服务支持通过创建 PV/PVC，并为工作负载挂载数据卷的方式使用云硬盘 CBS。本文介绍如何通过以下两种方式在集群中为工作负载挂载云硬盘：
+>? 通过 PV 和 PVC 使用云硬盘 CBS 时，一个云硬盘仅支持创建一个 PV，同时只能被一个 Pod 挂载。
+>
 - [方式1: 动态创建云硬盘](#dynamicCBS)
 - [方式2: 使用已有的云硬盘](#getCBS)
 
