--- a/product/安全服务/态势感知/产品动态.md
+++ b/product/安全服务/态势感知/产品动态.md
@@ -26,9 +26,9 @@
 <td>2021-08-13</td>
 <td><a href="https://cloud.tencent.com/document/product/664/49301">自动编排响应</td></tr>
 <td>购买指南</td>
-<td><li>高级版计费概述中，新增“筛选并查看收费资产”超链接。</li></td>
+<td>高级版计费概述中，新增“筛选并查看收费资产”超链接。</td>
 <td>2021-07-05</td>
-<td><a href="https://cloud.tencent.com/document/product/664/41278">自动编排响应</a></td></tr>
+<td><a href="https://cloud.tencent.com/document/product/664/41278">计费概述</a></td></tr>
 <tr>
 </tbody></table>
 
