--- a/product/数据库/数据传输服务DTS/最佳实践/多对一同步.md
+++ b/product/数据库/数据传输服务DTS/最佳实践/多对一同步.md
@@ -16,7 +16,7 @@
 - 多个同步任务配置中 DDL 不能形成环形链路。
 - 目前仅支持 MySQL，云数据库 TDSQL-C（兼容 MySQL 版）或者两者之间创建多对一同步任务。
 
-## 配置原则
+## DDL 配置原则
 
 - 多个同步任务配置中 DDL 不能形成环形链路，否则可能造成 DDL 语句在系统中循环，进而引发错误。
 - 目标端同一个库表对象不能接收多个源端的 DDL 同步，否则多个源端的 DDL 可能在目标端形成冲突，进而引发错误。
@@ -28,10 +28,9 @@
 
 #### [各场景推荐配置](id:tjpz)
 
-多对一同步是通过创建多个单向同步任务来构建多对一拓扑，每个单向同步的步骤与普通的单向同步的步骤类似，只是在同步选项设置有差异。
-
-如下列出了典型场景的推荐配置，请用户参考操作。
+多对一同步是通过创建多个单向同步任务来构建多对一拓扑，每个单向同步的步骤与普通的单向同步的步骤类似，只是在如下同步选项设置有差异。
 <img src="https://main.qcloudimg.com/raw/1feadc5ff345d608d9bc48e4dea49c9d.png" style="zoom:60%;" />
+
 <table>
 <thead><tr><th>设置项</th><th>参数</th><th>描述</th></tr></thead>
 <tbody>
@@ -50,12 +49,14 @@
 <td>同步操作类型</td><td>支持操作：Insert、Update、Delete、DDL。<br>双向同步最多支持在一个同步任务中选择 DDL。</td></tr>
 </tbody></table>
 
+如下列出了典型场景的推荐配置，请用户参考操作。
+
 示例：构建实例 A、B 到 C 的同步，且实例 A、B 中有相同名称的表需要同步到实例 C，任务一 A > C 同步，任务二 B > C 同步。如有更多的源端需要同步到目的端，参考任务二增加同步任务即可。
 
 <table>
 <tr><th width="15%">场景</th> <th width="13%">时间要求</th> <th width="10%">同步任务</th><th width="12%">初始化类型</th><th width="13%">已存在同名表</th><th width="17%">冲突处理机制</th><th width="15%">同步操作类型</th></tr>
 <tr>
-<td rowspan="2">场景一：实例 A、B 有库表结构和数据，实例 C 为空</td><td rowspan="2">需要等任务一进行到“同步增量”阶段再启动任务二</td><td>任务一</td><td>结构初始化 + 全量数据初始化</td><td>忽略并继续执行</td><td rowspan="6">请用户自行选择。<li>示例：如果某个主键发生冲突，用户需要以 A 的内容为准，则任务一选择冲突覆盖，任务二选择冲突忽略或者冲突报错。</li><li>冲突策略的生效对象仅对当前发生主键冲突时的主键数据。</li></td><td rowspan="6"><li>最多支持在一个任务中选择 DDL。</li><li>除 DDL 外，其他操作类型两个任务保持一致。</li></td></tr>
+<td rowspan="2">场景一：实例 A、B 有库表结构和数据，实例 C 为空</td><td rowspan="2">需要等任务一进行到“同步增量”阶段再启动任务二</td><td>任务一</td><td>结构初始化 + 全量数据初始化</td><td>忽略并继续执行</td><td rowspan="6">请用户自行选择。<li>示例：如果某个主键发生冲突，用户需要以 A 的内容为准，则任务一选择冲突覆盖，任务二选择冲突忽略或者冲突报错。</li><li>冲突策略的生效对象仅对当前发生主键冲突时的主键数据。</li></td><td rowspan="6"><li>最多支持在一个任务中选择 DDL。</li><li>除 DDL 外，其他操作类型多个任务保持一致。</li></td></tr>
 <tr>
 <td>任务二</td><td>全量数据初始化</td><td>忽略并继续执行</td></tr>
 <tr>
