--- a/product/数据库/数据传输服务DTS/最佳实践/双向同步.md
+++ b/product/数据库/数据传输服务DTS/最佳实践/双向同步.md
@@ -19,7 +19,7 @@
 
 #### [各场景推荐配置](id:tjpz)
 
-双向同步是通过创建两个单向同步任务来构建双向拓扑，每个单向同步的步骤与普通的单向同步的步骤类似，只是在同步选项设置有差异，如下列出了典型场景的推荐配置，请用户参考操作。
+双向同步是通过创建两个单向同步任务来构建双向拓扑，每个单向同步的步骤与普通的单向同步的步骤类似，只是在如下同步选项设置有差异。
 
 <img src="https://main.qcloudimg.com/raw/1feadc5ff345d608d9bc48e4dea49c9d.png" style="zoom:60%;" />
 
@@ -40,6 +40,8 @@
 <tr>
 <td>同步操作类型</td><td>支持操作：Insert、Update、Delete、DDL。<br>双向同步最多支持在一个同步任务中选择 DDL。</td></tr>
 </tbody></table>
+
+如下列出了典型场景的推荐配置，请用户参考操作。
 
 示例：构建实例 A 和实例 B 的双向同步，任务一 A > B 同步，任务二 B > A 同步。
 
