--- a/product/大数据与AI/文字识别/购买指南/计费概述.md
+++ b/product/大数据与AI/文字识别/购买指南/计费概述.md
@@ -369,7 +369,7 @@
 					<th>100万次</th>
 </tr>
 <tr>
-<td rowspan="2">营业执照核验</td>
+<td rowspan="3">营业执照核验</td>
 <td>营业执照识别及核验（基础版）</td>
 <td>营业执照识别及核验（基础版）</td>
 <td>——</td>
@@ -384,6 +384,15 @@
 <td>48元</td>
 <td>450元</td>
 <td>4000元</td>
+<td><a href="https://cloud.tencent.com/act/event/connect-service">联系商务</a></td>
+<td><a href="https://cloud.tencent.com/act/event/connect-service">联系商务</a></td>
+</tr>
+<tr>
+<td>企业四要素核验</td>
+<td>企业四要素核验</td>
+<td>110元</td>
+<td>1000元</td>
+<td>9000元</td>
 <td><a href="https://cloud.tencent.com/act/event/connect-service">联系商务</a></td>
 <td><a href="https://cloud.tencent.com/act/event/connect-service">联系商务</a></td>
 </tr>
@@ -710,7 +719,7 @@
 			<td>0.05元/次</td>
      </tr>
 		 <tr>
-		   <td rowspan="2">营业执照核验</td>   
+		   <td rowspan="3">营业执照核验</td>   
       <td>营业执照识别及核验（基础版）</td> 
 			<td>营业执照识别及核验（基础版）</td>
       <td>0.30元/次</td>  
@@ -718,12 +727,20 @@
 			<td>0.23元/次</td>
 			<td><a href="https://cloud.tencent.com/act/event/connect-service">联系商务</a></td>
      </tr>
-<tr>  
+	<tr>  
       <td>营业执照识别及核验（详细版）</td> 
 			<td>营业执照识别及核验（详细版）</td>
       <td>0.50元/次</td>  
 			<td>0.45元/次</td>  
 			<td>0.40元/次</td>
+			<td><a href="https://cloud.tencent.com/act/event/connect-service">联系商务</a></td>
+     </tr>
+		 <tr>  
+      <td>企业四要素核验</td> 
+			<td>企业四要素核验</td>
+      <td>1.2元/次</td>  
+			<td>1元/次</td>  
+			<td>0.9元/次</td>
 			<td><a href="https://cloud.tencent.com/act/event/connect-service">联系商务</a></td>
      </tr>
 		 <tr>
