--- a/product/大数据与AI/人脸核身（云智慧眼）/接入文档/增强版AppSDK接入文档/SDK接入/合作方后台上送身份信息.md
+++ b/product/大数据与AI/人脸核身（云智慧眼）/接入文档/增强版AppSDK接入文档/SDK接入/合作方后台上送身份信息.md
@@ -136,5 +136,5 @@ D7606F1741DDCF90757DA924EDCF152A200AC7F0
 - 计算 SHA1 得到签名：
 ```
 D7606F1741DDCF90757DA924EDCF152A200AC7F0
-该字串就是最终生成的签名（40 位），不区分大小写。
+该字符串就是最终生成的签名（40 位），不区分大小写。
 ```
