--- a/product/物联网/物联使能/服务管理/物联网应用服务简介.md
+++ b/product/物联网/物联使能/服务管理/物联网应用服务简介.md
@@ -3,7 +3,7 @@
 ## 服务查看
 
 1. 登录 [物联网开发平台控制台](https://console.cloud.tencent.com/iotexplorer)，完成 [SaaS创建](https://cloud.tencent.com/document/product/1465/58446)。
-2. 选择所创建的 SaaS 服务进入 SaaS 详情页。
+2. 选择所创建的物联网 SaaS 进入 SaaS 详情页。
 3. 单击**服务管理**查看物联网 SaaS 服务。物联网 SaaS 服务分为 [通用服务](#test1) 和 [行业服务](#test2)，提供了即开即用的开通体验。服务来源包括腾讯云官方服务和腾讯云合作伙伴的第三方服务。
    ![](https://main.qcloudimg.com/raw/1eea1c50cc07959338c16b03dd8afa6a.png)
 4. 单击**服务详情**可查看服务集成与 API 调用说明。
