--- a/product/移动与通信/腾讯移动推送/操作指南/通知点击跳转.md
+++ b/product/移动与通信/腾讯移动推送/操作指南/通知点击跳转.md
@@ -39,7 +39,7 @@
 
 #### 使用 Intent 方式跳转（推荐）
 
-使用 [移动推送 TPNS 控制台](https://console.cloud.tencent.com/tpns) 设置 Intent 进行跳转，在【高级设置】>【点击打开】中填写如下：
+使用 [移动推送 TPNS 控制台](https://console.cloud.tencent.com/tpns) 设置 Intent 进行跳转，在【推送任务】>【新建推送】>【高级设置】>【点击打开】中填写如下：
 
 ![](https://main.qcloudimg.com/raw/021c692b6b767212529430a4b44ae091.png)
 
