更新互动白板文档

--- a/product/大数据与AI/互动白板/客户端API/iOS&Mac/事件回调.md
+++ b/product/大数据与AI/互动白板/客户端API/iOS&Mac/事件回调.md
@@ -38,11 +38,11 @@
 
 ### 数据同步事件
 
-请务必监听此事件，对互动白板的任何操作，都将通过此事件触发，将事件回调的数据通过信令传输到其他端进行同步。
+请务必监听此事件，对互动白板的任何操作，都将通过此事件触发，将事件回调的数据通过信令传输到其他端进行同步；如果已经启用了内置的同步信令通道，SDK 内部已经处理好同步逻辑，业务侧不需要额外处理，同时也不会收到此事件回调。
 
 | 事件名 | 描述 |
 | --- | --- |
-| [onTEBSyncData:](https://doc.qcloudtiw.com/ios/Classes/TEduBoardController.html#//api/name/onTEBSyncData:) | 白板同步数据回调 |
+| [onTEBSyncData:](https://doc.qcloudtiw.com/ios/Protocols/TEduBoardDelegate.html#//api/name/onTEBSyncData:) | 白板同步数据回调 |
 
 
 ### 互动白板文件事件
