--- a/product/大数据与AI/互动白板/客户端API/iOS&Mac/概览.md
+++ b/product/大数据与AI/互动白板/客户端API/iOS&Mac/概览.md
@@ -197,4 +197,4 @@
 | API | 描述 |
 | --- | --- |
 | [snapshot:](https://doc.qcloudtiw.com/ios/Classes/TEduBoardController.html#//api/name/snapshot:) | 白板快照  |
-| [addSnapshotMark](https://doc.qcloudtiw.com/ios/Classes/TEduBoardController.html#//api/name/addSnapshotMark) | 生成板书图片标记需要配合服务端 API 接口来生成，服务端会根据标记点进行快照截图 |
+| [addSnapshotMark](https://doc.qcloudtiw.com/ios/Classes/TEduBoardController.html#//api/name/addSnapshotMark) | 生成板书图片标记<br/>需要配合服务端 API 接口来生成，服务端会根据标记点进行快照截图 |
