更新互动白板文档

--- a/product/大数据与AI/互动白板/客户端API/Android/事件回调.md
+++ b/product/大数据与AI/互动白板/客户端API/Android/事件回调.md
@@ -1,3 +1,5 @@
+## 事件回调
+
 ### 事件监听
 
 事件监听请使用互动白板的 [addCallback](https://doc.qcloudtiw.com/android/com/tencent/teduboard/TEduBoardController.html#addCallback-com.tencent.teduboard.TEduBoardController.TEduBoardCallback-) 方法。
@@ -11,9 +13,9 @@
 
 | 事件名 | 描述 |
 | --- | --- |
-| [onTEBInit](https://doc.qcloudtiw.com/android/com/tencent/teduboard/TEduBoardController.TEduBoardCallback.html#onTEBInit--) |  白板初始化完成回调<br>收到该回调后表示白板已处于可正常工作状态（此时白板为空白白板，历史数据尚未拉取到）<br/> |
+| [onTEBInit](https://doc.qcloudtiw.com/android/com/tencent/teduboard/TEduBoardController.TEduBoardCallback.html#onTEBInit--) |  白板初始化完成回调<br/>收到该回调后表示白板已处于可正常工作状态（此时白板为空白白板，历史数据尚未拉取到）<br/> |
 | [onTEBHistroyDataSyncCompleted](https://doc.qcloudtiw.com/android/com/tencent/teduboard/TEduBoardController.TEduBoardCallback.html#onTEBHistroyDataSyncCompleted--) |  白板历史数据同步完成回调<br/>`所有的白板操作和接口调用都要在此事件回调之后` |
-| [onTEBOfflineWarning](https://doc.qcloudtiw.com/android/com/tencent/teduboard/TEduBoardController.TEduBoardCallback.html#onTEBOfflineWarning-int-) |  白板离线告警 <br>互动白板在默认的离线时间（可在初始化参数配置）内没有任何操作且也没有收到来至其他人的操作，则会抛出此事件，此事件不影响白板使用<br/> |
+| [onTEBOfflineWarning](https://doc.qcloudtiw.com/android/com/tencent/teduboard/TEduBoardController.TEduBoardCallback.html#onTEBOfflineWarning-int-) |  白板离线告警 <br/>互动白板在默认的离线时间（可在初始化参数配置）内没有任何操作且也没有收到来至其他人的操作，则会抛出此事件，此事件不影响白板使用<br/> |
 
 ### 错误事件
 
@@ -35,7 +37,8 @@
 
 ### 数据同步事件
 
-请务必监听此事件，对互动白板的任何操作，都将通过此事件触发，将事件回调的数据通过信令传输到其他端进行同步。
+请务必监听此事件，对互动白板的任何操作，都将通过此事件触发，将事件回调的数据通过信令传输到其他端进行同步；如果已经启用了内置的同步信令通道，SDK 内部已经处理好同步逻辑，业务侧不需要额外处理，同时也不会收到此事件回调。
+
 
 | 事件名 | 描述 |
 | --- | --- |
