--- a/product/大数据与AI/互动白板/客户端API/Android/概览.md
+++ b/product/大数据与AI/互动白板/客户端API/Android/概览.md
@@ -58,9 +58,9 @@
 ### 文件操作接口
 | API | 描述 |
 | --- | --- |
-| [addImagesFile](https://doc.qcloudtiw.com/android/com/tencent/teduboard/TEduBoardController.html#addImagesFile-java.util.List-) | 批量导入图片当传入文件的 URL 重复时，返回 URL 对应的 文件 ID<br/>最大支持5k的数据  |
+| [addImagesFile](https://doc.qcloudtiw.com/android/com/tencent/teduboard/TEduBoardController.html#addImagesFile-java.util.List-) | 批量导入图片<br/>当传入文件的 URL 重复时，返回 URL 对应的 文件 ID<br/>最大支持5k的数据  |
 | [applyFileTranscode](https://doc.qcloudtiw.com/android/com/tencent/teduboard/TEduBoardController.html#applyFileTranscode-java.lang.String-com.tencent.teduboard.TEduBoardController.TEduBoardTranscodeConfig-) | 发起文件转码请求  |
-| [getFileTranscodeProgress](https://doc.qcloudtiw.com/android/com/tencent/teduboard/TEduBoardController.html#getFileTranscodeProgress-java.lang.String-) | 主动查询文件转码进度该接口仅用于特殊业务场景下主动查询文件转码进度，调用 applyFileTranscode 后，SDK 内部将会自动定期触发 onTEBFileTranscodeProgress 回调，正常情况下您不需要主动调用此接口 |
+| [getFileTranscodeProgress](https://doc.qcloudtiw.com/android/com/tencent/teduboard/TEduBoardController.html#getFileTranscodeProgress-java.lang.String-) | 主动查询文件转码进度<br/>该接口仅用于特殊业务场景下主动查询文件转码进度，调用 applyFileTranscode 后，SDK 内部将会自动定期触发 onTEBFileTranscodeProgress 回调，正常情况下您不需要主动调用此接口 |
 | [addTranscodeFile](https://doc.qcloudtiw.com/android/com/tencent/teduboard/TEduBoardController.html#addTranscodeFile-com.tencent.teduboard.TEduBoardController.TEduBoardTranscodeFileResult-boolean-) | 添加转码文件  |
 | [deleteFile](https://doc.qcloudtiw.com/android/com/tencent/teduboard/TEduBoardController.html#deleteFile-java.lang.String-) | 删除文件  |
 | [switchFile](https://doc.qcloudtiw.com/android/com/tencent/teduboard/TEduBoardController.html#switchFile-java.lang.String-) | 切换文件  |
@@ -174,23 +174,23 @@
 | API | 描述 |
 | --- | --- |
 | [snapshot](https://doc.qcloudtiw.com/android/com/tencent/teduboard/TEduBoardController.html#snapshot-com.tencent.teduboard.TEduBoardController.TEduBoardSnapshotInfo-) | 白板快照  |
-| [addSnapshotMark](https://doc.qcloudtiw.com/android/com/tencent/teduboard/TEduBoardController.html#addSnapshotMark--) | 生成板书图片标记需要配合服务端 API 接口来生成，服务端会根据标记点进行快照截图  |
+| [addSnapshotMark](https://doc.qcloudtiw.com/android/com/tencent/teduboard/TEduBoardController.html#addSnapshotMark--) | 生成板书图片标记<br/>需要配合服务端 API 接口来生成，服务端会根据标记点进行快照截图  |
 
 ### 分组讨论相关接口
 
 | API | 描述 |
 | --- | --- |
-| [addBoardToClassGroup](file:///E:/document_workspace/tiw-android-doc/com/tencent/teduboard/TEduBoardController.html#addBoardToClassGroup-java.lang.String-java.lang.String-) | 添加白板到分组 |
-| [addUserToClassGroup](file:///E:/document_workspace/tiw-android-doc/com/tencent/teduboard/TEduBoardController.html#addUserToClassGroup-java.lang.String-java.lang.String-) | 添加用户到分组 |
-| [getAllClassGroupIds](file:///E:/document_workspace/tiw-android-doc/com/tencent/teduboard/TEduBoardController.html#getAllClassGroupIds--)  | 获取所有分组 ID  |
-| [getClassGroupEnable](file:///E:/document_workspace/tiw-android-doc/com/tencent/teduboard/TEduBoardController.html#getClassGroupEnable--) | 获取分组模式状态 |
-| [getClassGroupIdByUserId](file:///E:/document_workspace/tiw-android-doc/com/tencent/teduboard/TEduBoardController.html#getClassGroupIdByUserId-java.lang.String-) |获取用户所在的分组 |
-| [getClassGroupInfoByGroupId](file:///E:/document_workspace/tiw-android-doc/com/tencent/teduboard/TEduBoardController.html#getClassGroupInfoByGroupId-java.lang.String-) |获取分组信息 |
-| [gotoClassGroupBoard](file:///E:/document_workspace/tiw-android-doc/com/tencent/teduboard/TEduBoardController.html#gotoClassGroupBoard-java.lang.String-) | 分组内跳转 |
-| [removeBoardInClassGroup](file:///E:/document_workspace/tiw-android-doc/com/tencent/teduboard/TEduBoardController.html#removeBoardInClassGroup-java.lang.String-java.lang.String-) | 从分组中删除白板 |
-| [removeClassGroup](file:///E:/document_workspace/tiw-android-doc/com/tencent/teduboard/TEduBoardController.html#removeClassGroup-java.lang.String-) | 删除分组 |
-| [removeUserInClassGroup](file:///E:/document_workspace/tiw-android-doc/com/tencent/teduboard/TEduBoardController.html#removeUserInClassGroup-java.lang.String-java.lang.String-) | 从分组中删除用户 |
-| [resetClassGroup](file:///E:/document_workspace/tiw-android-doc/com/tencent/teduboard/TEduBoardController.html#resetClassGroup--) | 重置所有分组 |
-| [setClassGroup](file:///E:/document_workspace/tiw-android-doc/com/tencent/teduboard/TEduBoardController.html#setClassGroup-java.lang.String-java.util.List-java.util.List-java.lang.String-java.lang.String-) | 添加分组 |
-| [setClassGroupEnable](file:///E:/document_workspace/tiw-android-doc/com/tencent/teduboard/TEduBoardController.html#setClassGroupEnable-boolean-) | 开启分组模式 |
-| [setClassGroupTitle](file:///E:/document_workspace/tiw-android-doc/com/tencent/teduboard/TEduBoardController.html#setClassGroupTitle-java.lang.String-java.lang.String-) | 设置分组标题 |
+| [addBoardToClassGroup](https://doc.qcloudtiw.com/android/com/tencent/teduboard/TEduBoardController.html#addBoardToClassGroup-java.lang.String-java.lang.String-) | 添加白板到分组 |
+| [addUserToClassGroup](https://doc.qcloudtiw.com/android/com/tencent/teduboard/TEduBoardController.html#addUserToClassGroup-java.lang.String-java.lang.String-) | 添加用户到分组 |
+| [getAllClassGroupIds](https://doc.qcloudtiw.com/android/com/tencent/teduboard/TEduBoardController.html#getAllClassGroupIds--)  | 获取所有分组id  |
+| [getClassGroupEnable](https://doc.qcloudtiw.com/android/com/tencent/teduboard/TEduBoardController.html#getClassGroupEnable--) | 获取分组模式状态 |
+| [getClassGroupIdByUserId](https://doc.qcloudtiw.com/android/com/tencent/teduboard/TEduBoardController.html#getClassGroupIdByUserId-java.lang.String-) |获取用户所在的分组 |
+| [getClassGroupInfoByGroupId](https://doc.qcloudtiw.com/android/com/tencent/teduboard/TEduBoardController.html#getClassGroupInfoByGroupId-java.lang.String-) |获取分组信息 |
+| [gotoClassGroupBoard](https://doc.qcloudtiw.com/android/com/tencent/teduboard/TEduBoardController.html#gotoClassGroupBoard-java.lang.String-) | 分组内跳转 |
+| [removeBoardInClassGroup](https://doc.qcloudtiw.com/android/com/tencent/teduboard/TEduBoardController.html#removeBoardInClassGroup-java.lang.String-java.lang.String-) | 从分组中删除白板 |
+| [removeClassGroup](https://doc.qcloudtiw.com/android/com/tencent/teduboard/TEduBoardController.html#removeClassGroup-java.lang.String-) | 删除分组 |
+| [removeUserInClassGroup](https://doc.qcloudtiw.com/android/com/tencent/teduboard/TEduBoardController.html#removeUserInClassGroup-java.lang.String-java.lang.String-) | 从分组中删除用户 |
+| [resetClassGroup](https://doc.qcloudtiw.com/android/com/tencent/teduboard/TEduBoardController.html#resetClassGroup--) | 重置所有分组 |
+| [setClassGroup](https://doc.qcloudtiw.com/android/com/tencent/teduboard/TEduBoardController.html#setClassGroup-java.lang.String-java.util.List-java.util.List-java.lang.String-java.lang.String-) | 添加分组 |
+| [setClassGroupEnable](https://doc.qcloudtiw.com/android/com/tencent/teduboard/TEduBoardController.html#setClassGroupEnable-boolean-) | 开启分组模式 |
+| [setClassGroupTitle](https://doc.qcloudtiw.com/android/com/tencent/teduboard/TEduBoardController.html#setClassGroupTitle-java.lang.String-java.lang.String-) | 设置分组标题 |
